reference/5.1/Microsoft.PowerShell.Core/About/about_Language_Keywords.md
---
description: PowerShell 스크립트 언어의 키워드에 대해 설명 합니다.
keywords: powershell,cmdlet
Locale: en-US
ms.date: 10/06/2020
online version: https://docs.microsoft.com/powershell/module/microsoft.powershell.core/about/about_language_keywords?view=powershell-5.1&WT.mc_id=ps-gethelp
schema: 2.0.0
title: about_Language_Keywords
ms.openlocfilehash: 6d59d0ac58eb5d2ddecc69be97b1ccebaca58195
ms.sourcegitcommit: f874dc1d4236e06a3df195d179f59e0a7d9f8436
ms.translationtype: MT
ms.contentlocale: ko-KR
ms.lasthandoff: 10/13/2020
ms.locfileid: "93222721"
---
# <a name="about-language-keywords"></a><span data-ttu-id="091c2-104">언어 키워드 정보</span><span class="sxs-lookup"><span data-stu-id="091c2-104">About Language Keywords</span></span>

## <a name="short-description"></a><span data-ttu-id="091c2-105">간단한 설명</span><span class="sxs-lookup"><span data-stu-id="091c2-105">SHORT DESCRIPTION</span></span>
<span data-ttu-id="091c2-106">PowerShell 스크립트 언어의 키워드에 대해 설명 합니다.</span><span class="sxs-lookup"><span data-stu-id="091c2-106">Describes the keywords in the PowerShell scripting language.</span></span>

## <a name="long-description"></a><span data-ttu-id="091c2-107">자세한 설명</span><span class="sxs-lookup"><span data-stu-id="091c2-107">LONG DESCRIPTION</span></span>

<span data-ttu-id="091c2-108">PowerShell에는 다음과 같은 언어 키워드가 있습니다.</span><span class="sxs-lookup"><span data-stu-id="091c2-108">PowerShell has the following language keywords.</span></span> <span data-ttu-id="091c2-109">자세한 내용은 키워드에 대 한 about 항목과 표 다음에 나오는 정보를 참조 하세요.</span><span class="sxs-lookup"><span data-stu-id="091c2-109">For more information, see the about topic for the keyword and the information that follows the table.</span></span>

<span data-ttu-id="091c2-110">키워드</span><span class="sxs-lookup"><span data-stu-id="091c2-110">Keyword</span></span>     | <span data-ttu-id="091c2-111">참조</span><span class="sxs-lookup"><span data-stu-id="091c2-111">Reference</span></span>
---         | ---
<span data-ttu-id="091c2-112">시작</span><span class="sxs-lookup"><span data-stu-id="091c2-112">Begin</span></span>       | <span data-ttu-id="091c2-113">[about_Functions](about_Functions.md), [about_Functions_Advanced](about_Functions_Advanced.md)</span><span class="sxs-lookup"><span data-stu-id="091c2-113">[about_Functions](about_Functions.md), [about_Functions_Advanced](about_Functions_Advanced.md)</span></span>
<span data-ttu-id="091c2-114">중단</span><span class="sxs-lookup"><span data-stu-id="091c2-114">Break</span></span>       | <span data-ttu-id="091c2-115">[about_Break](about_Break.md), [about_Trap](about_Trap.md)</span><span class="sxs-lookup"><span data-stu-id="091c2-115">[about_Break](about_Break.md), [about_Trap](about_Trap.md)</span></span>
<span data-ttu-id="091c2-116">Catch</span><span class="sxs-lookup"><span data-stu-id="091c2-116">Catch</span></span>       | [<span data-ttu-id="091c2-117">about_Try_Catch_Finally</span><span class="sxs-lookup"><span data-stu-id="091c2-117">about_Try_Catch_Finally</span></span>](about_Try_Catch_Finally.md)
<span data-ttu-id="091c2-118">클래스</span><span class="sxs-lookup"><span data-stu-id="091c2-118">Class</span></span>       | [<span data-ttu-id="091c2-119">about_Classes</span><span class="sxs-lookup"><span data-stu-id="091c2-119">about_Classes</span></span>](about_Classes.md)
<span data-ttu-id="091c2-120">계속</span><span class="sxs-lookup"><span data-stu-id="091c2-120">Continue</span></span>    | <span data-ttu-id="091c2-121">[about_Continue](about_Continue.md), [about_Trap](about_Trap.md)</span><span class="sxs-lookup"><span data-stu-id="091c2-121">[about_Continue](about_Continue.md), [about_Trap](about_Trap.md)</span></span>
<span data-ttu-id="091c2-122">데이터</span><span class="sxs-lookup"><span data-stu-id="091c2-122">Data</span></span>        | [<span data-ttu-id="091c2-123">about_Data_Sections</span><span class="sxs-lookup"><span data-stu-id="091c2-123">about_Data_Sections</span></span>](about_Data_Sections.md)
<span data-ttu-id="091c2-124">정의</span><span class="sxs-lookup"><span data-stu-id="091c2-124">Define</span></span>      | <span data-ttu-id="091c2-125">나중에 사용하도록 예약되어 있습니다.</span><span class="sxs-lookup"><span data-stu-id="091c2-125">Reserved for future use</span></span>
<span data-ttu-id="091c2-126">수행</span><span class="sxs-lookup"><span data-stu-id="091c2-126">Do</span></span>          | <span data-ttu-id="091c2-127">[about_Do](about_Do.md), [about_While](about_While.md)</span><span class="sxs-lookup"><span data-stu-id="091c2-127">[about_Do](about_Do.md), [about_While](about_While.md)</span></span>
<span data-ttu-id="091c2-128">DynamicParam</span><span class="sxs-lookup"><span data-stu-id="091c2-128">DynamicParam</span></span>| [<span data-ttu-id="091c2-129">about_Functions_Advanced_Parameters</span><span class="sxs-lookup"><span data-stu-id="091c2-129">about_Functions_Advanced_Parameters</span></span>](about_Functions_Advanced_Parameters.md)
<span data-ttu-id="091c2-130">Else</span><span class="sxs-lookup"><span data-stu-id="091c2-130">Else</span></span>        | [<span data-ttu-id="091c2-131">about_If</span><span class="sxs-lookup"><span data-stu-id="091c2-131">about_If</span></span>](about_If.md)
<span data-ttu-id="091c2-132">그렇지</span><span class="sxs-lookup"><span data-stu-id="091c2-132">Elseif</span></span>      | [<span data-ttu-id="091c2-133">about_If</span><span class="sxs-lookup"><span data-stu-id="091c2-133">about_If</span></span>](about_If.md)
<span data-ttu-id="091c2-134">끝</span><span class="sxs-lookup"><span data-stu-id="091c2-134">End</span></span>         | <span data-ttu-id="091c2-135">[about_Functions](about_Functions.md), [about_Functions_Advanced_Methods](about_Functions_Advanced_Methods.md)</span><span class="sxs-lookup"><span data-stu-id="091c2-135">[about_Functions](about_Functions.md), [about_Functions_Advanced_Methods](about_Functions_Advanced_Methods.md)</span></span>
<span data-ttu-id="091c2-136">열거형</span><span class="sxs-lookup"><span data-stu-id="091c2-136">Enum</span></span>        | [<span data-ttu-id="091c2-137">about_Enum</span><span class="sxs-lookup"><span data-stu-id="091c2-137">about_Enum</span></span>](about_Enum.md)
<span data-ttu-id="091c2-138">종료</span><span class="sxs-lookup"><span data-stu-id="091c2-138">Exit</span></span>        | [<span data-ttu-id="091c2-139">이 항목에 설명 되어 있습니다.</span><span class="sxs-lookup"><span data-stu-id="091c2-139">Described in this topic</span></span>](#exit)
<span data-ttu-id="091c2-140">Assert</span><span class="sxs-lookup"><span data-stu-id="091c2-140">Filter</span></span>      | [<span data-ttu-id="091c2-141">about_Functions</span><span class="sxs-lookup"><span data-stu-id="091c2-141">about_Functions</span></span>](about_Functions.md)
<span data-ttu-id="091c2-142">Finally</span><span class="sxs-lookup"><span data-stu-id="091c2-142">Finally</span></span>     | [<span data-ttu-id="091c2-143">about_Try_Catch_Finally</span><span class="sxs-lookup"><span data-stu-id="091c2-143">about_Try_Catch_Finally</span></span>](about_Try_Catch_Finally.md)
<span data-ttu-id="091c2-144">For</span><span class="sxs-lookup"><span data-stu-id="091c2-144">For</span></span>         | [<span data-ttu-id="091c2-145">about_For</span><span class="sxs-lookup"><span data-stu-id="091c2-145">about_For</span></span>](about_For.md)
<span data-ttu-id="091c2-146">ForEach</span><span class="sxs-lookup"><span data-stu-id="091c2-146">ForEach</span></span>     | [<span data-ttu-id="091c2-147">about_ForEach</span><span class="sxs-lookup"><span data-stu-id="091c2-147">about_ForEach</span></span>](about_ForEach.md)
<span data-ttu-id="091c2-148">보낸 사람</span><span class="sxs-lookup"><span data-stu-id="091c2-148">From</span></span>        | <span data-ttu-id="091c2-149">나중에 사용하도록 예약되어 있습니다.</span><span class="sxs-lookup"><span data-stu-id="091c2-149">Reserved for future use</span></span>
<span data-ttu-id="091c2-150">함수</span><span class="sxs-lookup"><span data-stu-id="091c2-150">Function</span></span>    | <span data-ttu-id="091c2-151">[about_Functions](about_Functions.md), [about_Functions_Advanced](about_Functions_Advanced.md)</span><span class="sxs-lookup"><span data-stu-id="091c2-151">[about_Functions](about_Functions.md), [about_Functions_Advanced](about_Functions_Advanced.md)</span></span>
<span data-ttu-id="091c2-152">숨김</span><span class="sxs-lookup"><span data-stu-id="091c2-152">Hidden</span></span>      | [<span data-ttu-id="091c2-153">about_Hidden</span><span class="sxs-lookup"><span data-stu-id="091c2-153">about_Hidden</span></span>](about_Hidden.md)
<span data-ttu-id="091c2-154">조건</span><span class="sxs-lookup"><span data-stu-id="091c2-154">If</span></span>          | [<span data-ttu-id="091c2-155">about_If</span><span class="sxs-lookup"><span data-stu-id="091c2-155">about_If</span></span>](about_If.md)
<span data-ttu-id="091c2-156">In(다음 안에)</span><span class="sxs-lookup"><span data-stu-id="091c2-156">In</span></span>          | [<span data-ttu-id="091c2-157">about_ForEach</span><span class="sxs-lookup"><span data-stu-id="091c2-157">about_ForEach</span></span>](about_ForEach.md)
<span data-ttu-id="091c2-158">InlineScript</span><span class="sxs-lookup"><span data-stu-id="091c2-158">InlineScript</span></span>| [<span data-ttu-id="091c2-159">about_InlineScript</span><span class="sxs-lookup"><span data-stu-id="091c2-159">about_InlineScript</span></span>](../../PSWorkflow/About/about_InlineScript.md)
<span data-ttu-id="091c2-160">매개 변수</span><span class="sxs-lookup"><span data-stu-id="091c2-160">Param</span></span>       | [<span data-ttu-id="091c2-161">about_Functions</span><span class="sxs-lookup"><span data-stu-id="091c2-161">about_Functions</span></span>](about_Functions.md)
<span data-ttu-id="091c2-162">프로세스</span><span class="sxs-lookup"><span data-stu-id="091c2-162">Process</span></span>     | <span data-ttu-id="091c2-163">[about_Functions](about_Functions.md), [about_Functions_Advanced](about_Functions_Advanced.md)</span><span class="sxs-lookup"><span data-stu-id="091c2-163">[about_Functions](about_Functions.md), [about_Functions_Advanced](about_Functions_Advanced.md)</span></span>
<span data-ttu-id="091c2-164">반환 값</span><span class="sxs-lookup"><span data-stu-id="091c2-164">Return</span></span>      | [<span data-ttu-id="091c2-165">about_Return</span><span class="sxs-lookup"><span data-stu-id="091c2-165">about_Return</span></span>](about_Return.md)
<span data-ttu-id="091c2-166">정적</span><span class="sxs-lookup"><span data-stu-id="091c2-166">Static</span></span>      | [<span data-ttu-id="091c2-167">about_Classes</span><span class="sxs-lookup"><span data-stu-id="091c2-167">about_Classes</span></span>](about_Classes.md)
<span data-ttu-id="091c2-168">스위치</span><span class="sxs-lookup"><span data-stu-id="091c2-168">Switch</span></span>      | [<span data-ttu-id="091c2-169">about_Switch</span><span class="sxs-lookup"><span data-stu-id="091c2-169">about_Switch</span></span>](about_Switch.md)
<span data-ttu-id="091c2-170">Throw</span><span class="sxs-lookup"><span data-stu-id="091c2-170">Throw</span></span>       | <span data-ttu-id="091c2-171">[about_Throw](about_Throw.md), [about_Functions_Advanced_Methods](about_Functions_Advanced_Methods.md)</span><span class="sxs-lookup"><span data-stu-id="091c2-171">[about_Throw](about_Throw.md), [about_Functions_Advanced_Methods](about_Functions_Advanced_Methods.md)</span></span>
<span data-ttu-id="091c2-172">Trap</span><span class="sxs-lookup"><span data-stu-id="091c2-172">Trap</span></span>        | <span data-ttu-id="091c2-173">[about_Trap](about_Trap.md), [about_Break](about_Break.md), [about_Try_Catch_Finally](about_Try_Catch_Finally.md)</span><span class="sxs-lookup"><span data-stu-id="091c2-173">[about_Trap](about_Trap.md), [about_Break](about_Break.md), [about_Try_Catch_Finally](about_Try_Catch_Finally.md)</span></span>
<span data-ttu-id="091c2-174">시도해 보기</span><span class="sxs-lookup"><span data-stu-id="091c2-174">Try</span></span>         | [<span data-ttu-id="091c2-175">about_Try_Catch_Finally</span><span class="sxs-lookup"><span data-stu-id="091c2-175">about_Try_Catch_Finally</span></span>](about_Try_Catch_Finally.md)
<span data-ttu-id="091c2-176">발생할</span><span class="sxs-lookup"><span data-stu-id="091c2-176">Until</span></span>       | [<span data-ttu-id="091c2-177">about_Do</span><span class="sxs-lookup"><span data-stu-id="091c2-177">about_Do</span></span>](about_Do.md)
<span data-ttu-id="091c2-178">사용</span><span class="sxs-lookup"><span data-stu-id="091c2-178">Using</span></span>       | <span data-ttu-id="091c2-179">[about_Using](about_Using.md), [about_Classes](about_Classes.md)</span><span class="sxs-lookup"><span data-stu-id="091c2-179">[about_Using](about_Using.md), [about_Classes](about_Classes.md)</span></span>
<span data-ttu-id="091c2-180">Var</span><span class="sxs-lookup"><span data-stu-id="091c2-180">Var</span></span>         | <span data-ttu-id="091c2-181">나중에 사용하도록 예약되어 있습니다.</span><span class="sxs-lookup"><span data-stu-id="091c2-181">Reserved for future use</span></span>
<span data-ttu-id="091c2-182">While</span><span class="sxs-lookup"><span data-stu-id="091c2-182">While</span></span>       | <span data-ttu-id="091c2-183">[about_While](about_While.md), [about_Do](about_Do.md)</span><span class="sxs-lookup"><span data-stu-id="091c2-183">[about_While](about_While.md), [about_Do](about_Do.md)</span></span>

<span data-ttu-id="091c2-184">언어 키워드</span><span class="sxs-lookup"><span data-stu-id="091c2-184">Language Keywords</span></span>

### <a name="begin"></a><span data-ttu-id="091c2-185">시작</span><span class="sxs-lookup"><span data-stu-id="091c2-185">Begin</span></span>

<span data-ttu-id="091c2-186">`DynamicParam`, 및 키워드와 함께 함수 본문의 한 부분을 지정 합니다 `Process` `End` .</span><span class="sxs-lookup"><span data-stu-id="091c2-186">Specifies one part of the body of a function, along with the `DynamicParam`, `Process`, and `End` keywords.</span></span> <span data-ttu-id="091c2-187">`Begin`문 목록은 파이프라인에서 개체를 수신 하기 전에 한 번 실행 됩니다.</span><span class="sxs-lookup"><span data-stu-id="091c2-187">The `Begin` statement list runs one time before any objects are received from the pipeline.</span></span>

<span data-ttu-id="091c2-188">구문</span><span class="sxs-lookup"><span data-stu-id="091c2-188">Syntax:</span></span>

```Syntax
function <name> {
    DynamicParam {<statement list>}
    begin {<statement list>}
    process {<statement list>}
    end {<statement list>}
}
```

### <a name="break"></a><span data-ttu-id="091c2-189">중단</span><span class="sxs-lookup"><span data-stu-id="091c2-189">Break</span></span>

<span data-ttu-id="091c2-190">스크립트에서 루프가 종료 되도록 합니다.</span><span class="sxs-lookup"><span data-stu-id="091c2-190">Causes a script to exit a loop.</span></span>

<span data-ttu-id="091c2-191">구문</span><span class="sxs-lookup"><span data-stu-id="091c2-191">Syntax:</span></span>

```Syntax
while (<condition>) {
   <statements>
   ...

   break
   ...

   <statements>
}
```

### <a name="catch"></a><span data-ttu-id="091c2-192">Catch</span><span class="sxs-lookup"><span data-stu-id="091c2-192">Catch</span></span>

<span data-ttu-id="091c2-193">함께 제공 된 Try 문 목록에서 오류가 발생 하는 경우 실행할 문 목록을 지정 합니다.</span><span class="sxs-lookup"><span data-stu-id="091c2-193">Specifies a statement list to run if an error occurs in the accompanying Try statement list.</span></span> <span data-ttu-id="091c2-194">오류 유형에는 대괄호가 필요 합니다.</span><span class="sxs-lookup"><span data-stu-id="091c2-194">An error type requires brackets.</span></span> <span data-ttu-id="091c2-195">두 번째 대괄호 쌍은 오류 유형이 optional 임을 나타냅니다.</span><span class="sxs-lookup"><span data-stu-id="091c2-195">The second pair of brackets indicates that the error type is optional.</span></span>

<span data-ttu-id="091c2-196">구문</span><span class="sxs-lookup"><span data-stu-id="091c2-196">Syntax:</span></span>

```Syntax
try {<statement list>}
catch [[<error type>]] {<statement list>}
```

### <a name="class"></a><span data-ttu-id="091c2-197">클래스</span><span class="sxs-lookup"><span data-stu-id="091c2-197">Class</span></span>

<span data-ttu-id="091c2-198">PowerShell에서 새 클래스를 지정 합니다.</span><span class="sxs-lookup"><span data-stu-id="091c2-198">Specifies a new class in PowerShell.</span></span>

<span data-ttu-id="091c2-199">구문</span><span class="sxs-lookup"><span data-stu-id="091c2-199">Syntax:</span></span>

```Syntax
class <class-name> {
    [[hidden] [static] <property-definition> ...]
    [<class-name>([argument-list>]) {<constructor-statement-list>} ...]
    [[hidden] [static] <method-definition> ...]
}
```

### <a name="continue"></a><span data-ttu-id="091c2-200">계속</span><span class="sxs-lookup"><span data-stu-id="091c2-200">Continue</span></span>

<span data-ttu-id="091c2-201">스크립트를 실행 하 여 루프의 실행을 중지 하 고 조건으로 돌아갑니다.</span><span class="sxs-lookup"><span data-stu-id="091c2-201">Causes a script to stop running a loop and to go back to the condition.</span></span> <span data-ttu-id="091c2-202">조건을 충족 하는 경우 스크립트는 루프를 다시 시작 합니다.</span><span class="sxs-lookup"><span data-stu-id="091c2-202">If the condition is met, the script begins the loop again.</span></span>

<span data-ttu-id="091c2-203">구문</span><span class="sxs-lookup"><span data-stu-id="091c2-203">Syntax:</span></span>

```Syntax
while (<condition>) {
   <statements>
   ...

   continue
   ...

   <statements>
}
```

### <a name="data"></a><span data-ttu-id="091c2-204">데이터</span><span class="sxs-lookup"><span data-stu-id="091c2-204">Data</span></span>

<span data-ttu-id="091c2-205">스크립트에서는 스크립트 논리에서 데이터를 격리 하는 섹션을 정의 합니다.</span><span class="sxs-lookup"><span data-stu-id="091c2-205">In a script, defines a section that isolates data from the script logic.</span></span> <span data-ttu-id="091c2-206">`If`문과 몇 가지 제한 된 명령만 포함할 수 있습니다.</span><span class="sxs-lookup"><span data-stu-id="091c2-206">Can also include `If` statements and some limited commands.</span></span>

<span data-ttu-id="091c2-207">구문</span><span class="sxs-lookup"><span data-stu-id="091c2-207">Syntax:</span></span>

```Syntax
data <variable> [-supportedCommand <cmdlet-name>] {<permitted content>}
```

### <a name="do"></a><span data-ttu-id="091c2-208">수행</span><span class="sxs-lookup"><span data-stu-id="091c2-208">Do</span></span>

<span data-ttu-id="091c2-209">`While` `Until` 루프 구문으로 또는 키워드와 함께 사용 됩니다.</span><span class="sxs-lookup"><span data-stu-id="091c2-209">Used with the `While` or `Until` keyword as a looping construct.</span></span> <span data-ttu-id="091c2-210">PowerShell은에서 사용 하는 루프와 달리 문 목록을 한 번 이상 실행 `While` 합니다.</span><span class="sxs-lookup"><span data-stu-id="091c2-210">PowerShell runs the statement list at least one time, unlike a loop that uses `While`.</span></span>

<span data-ttu-id="091c2-211">`While` 구문:</span><span class="sxs-lookup"><span data-stu-id="091c2-211">Syntax for `While`:</span></span>

```Syntax
do {<statement list>} while (<condition>)
```

<span data-ttu-id="091c2-212">`Until` 구문:</span><span class="sxs-lookup"><span data-stu-id="091c2-212">Syntax for `Until`:</span></span>

```Syntax
do {<statement list>} until (<condition>)
```

### <a name="dynamicparam"></a><span data-ttu-id="091c2-213">DynamicParam</span><span class="sxs-lookup"><span data-stu-id="091c2-213">DynamicParam</span></span>

<span data-ttu-id="091c2-214">`Begin`, 및 키워드와 함께 함수 본문의 한 부분을 지정 합니다 `Process` `End` .</span><span class="sxs-lookup"><span data-stu-id="091c2-214">Specifies one part of the body of a function, along with the `Begin`, `Process`, and `End` keywords.</span></span> <span data-ttu-id="091c2-215">동적 매개 변수는 런타임에 추가 됩니다.</span><span class="sxs-lookup"><span data-stu-id="091c2-215">Dynamic parameters are added at run time.</span></span>

<span data-ttu-id="091c2-216">구문</span><span class="sxs-lookup"><span data-stu-id="091c2-216">Syntax:</span></span>

```Syntax
function <name> {
   DynamicParam {<statement list>}
   begin {<statement list>}
   process {<statement list>}
   end {<statement list>}
}
```

### <a name="else"></a><span data-ttu-id="091c2-217">Else</span><span class="sxs-lookup"><span data-stu-id="091c2-217">Else</span></span>

<span data-ttu-id="091c2-218">키워드와 함께 사용 되어 `If` 기본 문 목록을 지정 합니다.</span><span class="sxs-lookup"><span data-stu-id="091c2-218">Used with the `If` keyword to specify the default statement list.</span></span>

<span data-ttu-id="091c2-219">구문</span><span class="sxs-lookup"><span data-stu-id="091c2-219">Syntax:</span></span>

```Syntax
if (<condition>) {<statement list>}
else {<statement list>}
```

### <a name="elseif"></a><span data-ttu-id="091c2-220">그렇지</span><span class="sxs-lookup"><span data-stu-id="091c2-220">Elseif</span></span>

<span data-ttu-id="091c2-221">`If` `Else` 추가 조건을 지정 하기 위해 및 키워드와 함께 사용 됩니다.</span><span class="sxs-lookup"><span data-stu-id="091c2-221">Used with the `If` and `Else` keywords to specify additional conditionals.</span></span> <span data-ttu-id="091c2-222">`Else`키워드는 선택 사항입니다.</span><span class="sxs-lookup"><span data-stu-id="091c2-222">The `Else` keyword is optional.</span></span>

<span data-ttu-id="091c2-223">구문</span><span class="sxs-lookup"><span data-stu-id="091c2-223">Syntax:</span></span>

```Syntax
if (<condition>) {<statement list>}
elseif (<condition>) {<statement list>}
else {<statement list>}
```

### <a name="end"></a><span data-ttu-id="091c2-224">끝</span><span class="sxs-lookup"><span data-stu-id="091c2-224">End</span></span>

<span data-ttu-id="091c2-225">`DynamicParam`, 및 키워드와 함께 함수 본문의 한 부분을 지정 합니다 `Begin` `End` .</span><span class="sxs-lookup"><span data-stu-id="091c2-225">Specifies one part of the body of a function, along with the `DynamicParam`, `Begin`, and `End` keywords.</span></span> <span data-ttu-id="091c2-226">`End`문 목록은 파이프라인에서 모든 개체를 받은 후 한 번 실행 됩니다.</span><span class="sxs-lookup"><span data-stu-id="091c2-226">The `End` statement list runs one time after all the objects have been received from the pipeline.</span></span>

<span data-ttu-id="091c2-227">구문</span><span class="sxs-lookup"><span data-stu-id="091c2-227">Syntax:</span></span>

```Syntax
function <name> {
   DynamicParam {<statement list>}
   begin {<statement list>}
   process {<statement list>}
   end {<statement list>}
}
```

### <a name="enum"></a><span data-ttu-id="091c2-228">열거형</span><span class="sxs-lookup"><span data-stu-id="091c2-228">Enum</span></span>

<span data-ttu-id="091c2-229">`enum` 는 열거형을 선언 하는 데 사용 됩니다. 열거자 목록 이라고 하는 명명 된 레이블 집합으로 구성 된 고유 형식입니다.</span><span class="sxs-lookup"><span data-stu-id="091c2-229">`enum` is used to declare an enumeration; a distinct type that consists of a set of named labels called the enumerator list.</span></span>

<span data-ttu-id="091c2-230">구문</span><span class="sxs-lookup"><span data-stu-id="091c2-230">Syntax:</span></span>

```Syntax
enum <enum-name> {
    <label> [= <int-value>]
    ...
}
```

### <a name="exit"></a><span data-ttu-id="091c2-231">종료</span><span class="sxs-lookup"><span data-stu-id="091c2-231">Exit</span></span>

<span data-ttu-id="091c2-232">PowerShell에서 스크립트나 PowerShell 인스턴스를 종료 하도록 합니다.</span><span class="sxs-lookup"><span data-stu-id="091c2-232">Causes PowerShell to exit a script or a PowerShell instance.</span></span>

<span data-ttu-id="091c2-233">구문</span><span class="sxs-lookup"><span data-stu-id="091c2-233">Syntax:</span></span>

```Syntax
exit
exit <exitcode>
```

<span data-ttu-id="091c2-234">File 매개 변수와 함께를 사용 하는 경우 스크립트를 `powershell.exe` **File** `.ps1` 실행 하는 동안 발생 하는 오류 또는 예외를 처리 하기 위한 지침을 스크립트 파일 자체에 포함 해야 합니다.</span><span class="sxs-lookup"><span data-stu-id="091c2-234">When you use `powershell.exe` with the **File** parameter, the `.ps1` (script) file itself should include instructions for handling any errors or exceptions that occur while the script is running.</span></span> <span data-ttu-id="091c2-235">`exit`문을 사용 하 여 스크립트의 실행 후 상태를 나타내야 합니다.</span><span class="sxs-lookup"><span data-stu-id="091c2-235">You should only use the `exit` statement to indicate the post-execution status of the script.</span></span>

<span data-ttu-id="091c2-236">과 사이의 숫자가 `[int]::MinValue` 모두 `[int]::MaxValue` 허용 됩니다.</span><span class="sxs-lookup"><span data-stu-id="091c2-236">Any number between `[int]::MinValue` and `[int]::MaxValue` is allowed.</span></span>

<span data-ttu-id="091c2-237">PowerShell에서 `exit` 문은 변수의 값을 설정 `$LASTEXITCODE` 합니다.</span><span class="sxs-lookup"><span data-stu-id="091c2-237">In PowerShell, the `exit` statement sets the value of the `$LASTEXITCODE` variable.</span></span> <span data-ttu-id="091c2-238">Windows 명령 셸 (cmd.exe)에서 exit 문은 환경 변수의 값을 설정 합니다 `%ERRORLEVEL%` .</span><span class="sxs-lookup"><span data-stu-id="091c2-238">In the Windows Command Shell (cmd.exe), the exit statement sets the value of the `%ERRORLEVEL%` environment variable.</span></span>

<span data-ttu-id="091c2-239">숫자가 아니거나 플랫폼별 범위를 벗어난 인수는의 값으로 변환 됩니다 `0` .</span><span class="sxs-lookup"><span data-stu-id="091c2-239">Any argument that is non-numeric or outside the platform-specific range is translated to the value of `0`.</span></span>

<span data-ttu-id="091c2-240">다음 예에서는 스크립트 파일에를 추가 하 여 오류 수준 변수 값을 4로 설정 합니다 `exit 4` `test.ps1` .</span><span class="sxs-lookup"><span data-stu-id="091c2-240">In the following example, the user sets the error level variable value to 4 by adding `exit 4` to the script file `test.ps1`.</span></span>

```cmd
C:\scripts\test>type test.ps1
1
2
3
exit 4

C:\scripts\test>powershell -file ./test.ps1
1
2
3

C:\scripts\test>echo %ERRORLEVEL%
4
```

<span data-ttu-id="091c2-241">을 실행 하 `pwsh.exe -File <path to a script>` 고 스크립트 파일이 명령을 사용 하 여 종료 되는 경우 `exit` 종료 코드는 명령에 사용 되는 숫자 인수로 설정 됩니다 `exit` .</span><span class="sxs-lookup"><span data-stu-id="091c2-241">When you run `pwsh.exe -File <path to a script>` and the script file terminates with an `exit` command, the exit code is set to the numeric argument used with the `exit` command.</span></span> <span data-ttu-id="091c2-242">스크립트에 문이 없으면 스크립트를 `exit` `0` 오류 없이 완료 하거나 `1` 스크립트가 처리 되지 않은 예외에서 종료 될 때 종료 코드는 항상입니다.</span><span class="sxs-lookup"><span data-stu-id="091c2-242">If the script has no `exit` statement, the exit code is always `0` when the script completes without error or `1` when the script terminates from an unhandled exception.</span></span>

### <a name="filter"></a><span data-ttu-id="091c2-243">Assert</span><span class="sxs-lookup"><span data-stu-id="091c2-243">Filter</span></span>

<span data-ttu-id="091c2-244">각 입력 개체에 대해 문 목록이 한 번씩 실행 되는 함수를 지정 합니다.</span><span class="sxs-lookup"><span data-stu-id="091c2-244">Specifies a function in which the statement list runs one time for each input object.</span></span> <span data-ttu-id="091c2-245">프로세스 블록만 포함 하는 함수와 동일한 효과를 가집니다.</span><span class="sxs-lookup"><span data-stu-id="091c2-245">It has the same effect as a function that contains only a Process block.</span></span>

<span data-ttu-id="091c2-246">구문</span><span class="sxs-lookup"><span data-stu-id="091c2-246">Syntax:</span></span>

```Syntax
filter <name> {<statement list>}
```

### <a name="finally"></a><span data-ttu-id="091c2-247">Finally</span><span class="sxs-lookup"><span data-stu-id="091c2-247">Finally</span></span>

<span data-ttu-id="091c2-248">Try 및 Catch와 연결 된 after 문으로 실행 되는 문 목록을 정의 합니다.</span><span class="sxs-lookup"><span data-stu-id="091c2-248">Defines a statement list that runs after statements that are associated with Try and Catch.</span></span> <span data-ttu-id="091c2-249">`Finally` `CTRL+C` 스크립트를 유지 하거나 스크립트에서 Exit 키워드를 사용 하는 경우에도 문 목록이 실행 됩니다.</span><span class="sxs-lookup"><span data-stu-id="091c2-249">A `Finally` statement list runs even if you press `CTRL+C` to leave a script or if you use the Exit keyword in the script.</span></span>

<span data-ttu-id="091c2-250">구문</span><span class="sxs-lookup"><span data-stu-id="091c2-250">Syntax:</span></span>

```Syntax
try {<statement list>}
catch [<error type>] {<statement list>}
finally {<statement list>}
```

### <a name="for"></a><span data-ttu-id="091c2-251">For</span><span class="sxs-lookup"><span data-stu-id="091c2-251">For</span></span>

<span data-ttu-id="091c2-252">조건을 사용 하 여 루프를 정의 합니다.</span><span class="sxs-lookup"><span data-stu-id="091c2-252">Defines a loop by using a condition.</span></span>

<span data-ttu-id="091c2-253">구문</span><span class="sxs-lookup"><span data-stu-id="091c2-253">Syntax:</span></span>

```Syntax
for (<initialize>; <condition>; <iterate>) { <statement list> }
```

### <a name="foreach"></a><span data-ttu-id="091c2-254">ForEach</span><span class="sxs-lookup"><span data-stu-id="091c2-254">ForEach</span></span>

<span data-ttu-id="091c2-255">컬렉션의 각 멤버를 사용 하 여 루프를 정의 합니다.</span><span class="sxs-lookup"><span data-stu-id="091c2-255">Defines a loop by using each member of a collection.</span></span>

<span data-ttu-id="091c2-256">구문</span><span class="sxs-lookup"><span data-stu-id="091c2-256">Syntax:</span></span>

```Syntax
ForEach (<item> in <collection>) { <statement list> }
```

### <a name="from"></a><span data-ttu-id="091c2-257">보낸 사람</span><span class="sxs-lookup"><span data-stu-id="091c2-257">From</span></span>

<span data-ttu-id="091c2-258">나중에 사용하기 위해 예약되어 있습니다.</span><span class="sxs-lookup"><span data-stu-id="091c2-258">Reserved for future use.</span></span>

### <a name="function"></a><span data-ttu-id="091c2-259">함수</span><span class="sxs-lookup"><span data-stu-id="091c2-259">Function</span></span>

<span data-ttu-id="091c2-260">재사용 가능한 코드의 명명 된 문 목록을 만듭니다.</span><span class="sxs-lookup"><span data-stu-id="091c2-260">Creates a named statement list of reusable code.</span></span> <span data-ttu-id="091c2-261">함수가 속한 범위의 이름을 지정할 수 있습니다.</span><span class="sxs-lookup"><span data-stu-id="091c2-261">You can name the scope a function belongs to.</span></span> <span data-ttu-id="091c2-262">키워드를 사용 하 여 하나 이상의 명명 된 매개 변수를 지정할 수 있습니다 `Param` .</span><span class="sxs-lookup"><span data-stu-id="091c2-262">And, you can specify one or more named parameters by using the `Param` keyword.</span></span> <span data-ttu-id="091c2-263">함수 문 목록 내에 `DynamicParam` ,, `Begin` `Process` 및 `End` 문 목록을 포함할 수 있습니다.</span><span class="sxs-lookup"><span data-stu-id="091c2-263">Within the function statement list, you can include `DynamicParam`, `Begin`, `Process`, and `End` statement lists.</span></span>

<span data-ttu-id="091c2-264">구문</span><span class="sxs-lookup"><span data-stu-id="091c2-264">Syntax:</span></span>

```Syntax
function [<scope:>]<name> {
   param ([type]<$pname1> [, [type]<$pname2>])
   DynamicParam {<statement list>}
   begin {<statement list>}
   process {<statement list>}
   end {<statement list>}
}
```

<span data-ttu-id="091c2-265">또한 문 목록 외부에서 함수 이름 뒤에 하나 이상의 매개 변수를 정의 하는 옵션이 있습니다.</span><span class="sxs-lookup"><span data-stu-id="091c2-265">You also have the option of defining one or more parameters outside the statement list after the function name.</span></span>

<span data-ttu-id="091c2-266">구문</span><span class="sxs-lookup"><span data-stu-id="091c2-266">Syntax:</span></span>

```Syntax
function [<scope:>]<name> [([type]<$pname1>, [[type]<$pname2>])] {
   DynamicParam {<statement list>}
   begin {<statement list>}
   process {<statement list>}
   end {<statement list>}
}
```

### <a name="if"></a><span data-ttu-id="091c2-267">조건</span><span class="sxs-lookup"><span data-stu-id="091c2-267">If</span></span>

<span data-ttu-id="091c2-268">조건부를 정의 합니다.</span><span class="sxs-lookup"><span data-stu-id="091c2-268">Defines a conditional.</span></span>

<span data-ttu-id="091c2-269">구문</span><span class="sxs-lookup"><span data-stu-id="091c2-269">Syntax:</span></span>

```Syntax
if (<condition>) {<statement list>}
```

### <a name="hidden"></a><span data-ttu-id="091c2-270">숨김</span><span class="sxs-lookup"><span data-stu-id="091c2-270">Hidden</span></span>

<span data-ttu-id="091c2-271">Cmdlet의 기본 결과 `Get-Member` 와 IntelliSense 및 탭 완성 결과에서 클래스 멤버를 숨깁니다.</span><span class="sxs-lookup"><span data-stu-id="091c2-271">Hides class members from the default results of the `Get-Member` cmdlet, and from IntelliSense and tab completion results.</span></span>

<span data-ttu-id="091c2-272">구문</span><span class="sxs-lookup"><span data-stu-id="091c2-272">Syntax:</span></span>

```Syntax
Hidden [data type] $member_name
```

### <a name="in"></a><span data-ttu-id="091c2-273">In(다음 안에)</span><span class="sxs-lookup"><span data-stu-id="091c2-273">In</span></span>

<span data-ttu-id="091c2-274">`ForEach`컬렉션의 각 멤버를 사용 하는 루프를 만들기 위해 문에 사용 됩니다.</span><span class="sxs-lookup"><span data-stu-id="091c2-274">Used in a `ForEach` statement to create a loop that uses each member of a collection.</span></span>

<span data-ttu-id="091c2-275">구문</span><span class="sxs-lookup"><span data-stu-id="091c2-275">Syntax:</span></span>

```Syntax
ForEach (<item> in <collection>){<statement list>}
```

### <a name="inlinescript"></a><span data-ttu-id="091c2-276">InlineScript</span><span class="sxs-lookup"><span data-stu-id="091c2-276">InlineScript</span></span>

<span data-ttu-id="091c2-277">공유 PowerShell 세션에서 워크플로 명령을 실행 합니다.</span><span class="sxs-lookup"><span data-stu-id="091c2-277">Runs workflow commands in a shared PowerShell session.</span></span> <span data-ttu-id="091c2-278">이 키워드는 PowerShell 워크플로에서만 유효 합니다.</span><span class="sxs-lookup"><span data-stu-id="091c2-278">This keyword is valid only in a PowerShell Workflow.</span></span>

<span data-ttu-id="091c2-279">구문</span><span class="sxs-lookup"><span data-stu-id="091c2-279">Syntax:</span></span>

```Syntax
workflow <verb>-<noun>
{
   InlineScript
   {
      <Command/Expression>
      ...

   }
}
```

<span data-ttu-id="091c2-280">`InlineScript`키워드는 `InlineScript` 공유 표준 (비 워크플로) 세션에서 명령을 실행 하는 활동을 나타냅니다.</span><span class="sxs-lookup"><span data-stu-id="091c2-280">The `InlineScript` keyword indicates an `InlineScript` activity, which runs commands in a shared standard (non-workflow) session.</span></span> <span data-ttu-id="091c2-281">키워드를 사용 하 여 `InlineScript` 워크플로에서 유효 하지 않은 명령을 실행 하 고 데이터를 공유 하는 명령을 실행할 수 있습니다.</span><span class="sxs-lookup"><span data-stu-id="091c2-281">You can use the `InlineScript` keyword to run commands that are not otherwise valid in a workflow, and to run commands that share data.</span></span> <span data-ttu-id="091c2-282">기본적으로 InlineScript 스크립트 블록의 명령은 별도의 프로세스에서 실행 됩니다.</span><span class="sxs-lookup"><span data-stu-id="091c2-282">By default, the commands in an InlineScript script block run in a separate process.</span></span>

<span data-ttu-id="091c2-283">자세한 내용은 [워크플로에서 PowerShell 명령 실행](/previous-versions/windows/it-pro/windows-server-2012-R2-and-2012/jj574197(v=ws.11))을 참조 하세요.</span><span class="sxs-lookup"><span data-stu-id="091c2-283">For more information, see [Running PowerShell Commands in a Workflow](/previous-versions/windows/it-pro/windows-server-2012-R2-and-2012/jj574197(v=ws.11)).</span></span>

### <a name="param"></a><span data-ttu-id="091c2-284">매개 변수</span><span class="sxs-lookup"><span data-stu-id="091c2-284">Param</span></span>

<span data-ttu-id="091c2-285">함수에서 매개 변수를 정의 합니다.</span><span class="sxs-lookup"><span data-stu-id="091c2-285">Defines the parameters in a function.</span></span>

<span data-ttu-id="091c2-286">구문</span><span class="sxs-lookup"><span data-stu-id="091c2-286">Syntax:</span></span>

```Syntax
function [<scope:>]<name> {
   param ([type]<$pname1>[, [[type]<$pname2>]])
   <statement list>
}
```

### <a name="process"></a><span data-ttu-id="091c2-287">프로세스</span><span class="sxs-lookup"><span data-stu-id="091c2-287">Process</span></span>

<span data-ttu-id="091c2-288">`DynamicParam`, 및 키워드와 함께 함수 본문의 부분을 지정 합니다 `Begin` `End` .</span><span class="sxs-lookup"><span data-stu-id="091c2-288">Specifies a part of the body of a function, along with the `DynamicParam`, `Begin`, and `End` keywords.</span></span> <span data-ttu-id="091c2-289">`Process`문 목록이 파이프라인에서 입력을 받으면 `Process` 문 목록이 파이프라인의 각 요소에 대해 한 번씩 실행 됩니다.</span><span class="sxs-lookup"><span data-stu-id="091c2-289">When a `Process` statement list receives input from the pipeline, the `Process` statement list runs one time for each element from the pipeline.</span></span> <span data-ttu-id="091c2-290">파이프라인에서 개체를 제공 하지 않는 경우 `Process` 문 목록이 실행 되지 않습니다.</span><span class="sxs-lookup"><span data-stu-id="091c2-290">If the pipeline provides no objects, the `Process` statement list does not run.</span></span> <span data-ttu-id="091c2-291">명령이 파이프라인의 첫 번째 명령이 면 `Process` 문 목록이 한 번 실행 됩니다.</span><span class="sxs-lookup"><span data-stu-id="091c2-291">If the command is the first command in the pipeline, the `Process` statement list runs one time.</span></span>

<span data-ttu-id="091c2-292">구문</span><span class="sxs-lookup"><span data-stu-id="091c2-292">Syntax:</span></span>

```Syntax
function <name> {
   DynamicParam {<statement list>}
   begin {<statement list>}
   process {<statement list>}
   end {<statement list>}
}
```

### <a name="return"></a><span data-ttu-id="091c2-293">반환 값</span><span class="sxs-lookup"><span data-stu-id="091c2-293">Return</span></span>

<span data-ttu-id="091c2-294">PowerShell에서 스크립트나 함수와 같은 현재 범위를 유지 하 고 선택적 식을 출력에 기록 합니다.</span><span class="sxs-lookup"><span data-stu-id="091c2-294">Causes PowerShell to leave the current scope, such as a script or function, and writes the optional expression to the output.</span></span>

<span data-ttu-id="091c2-295">구문</span><span class="sxs-lookup"><span data-stu-id="091c2-295">Syntax:</span></span>

```Syntax
return [<expression>]
```

### <a name="static"></a><span data-ttu-id="091c2-296">정적</span><span class="sxs-lookup"><span data-stu-id="091c2-296">Static</span></span>

<span data-ttu-id="091c2-297">가 정의 된 클래스의 모든 인스턴스에 공통적으로 정의 된 속성이 나 메서드를 지정 합니다.</span><span class="sxs-lookup"><span data-stu-id="091c2-297">Specifies the property or method defined is common to all instances of the class in which is defined.</span></span>

<span data-ttu-id="091c2-298">`Class`사용 예제는를 참조 하세요.</span><span class="sxs-lookup"><span data-stu-id="091c2-298">See `Class` for usage examples.</span></span>

### <a name="switch"></a><span data-ttu-id="091c2-299">스위치</span><span class="sxs-lookup"><span data-stu-id="091c2-299">Switch</span></span>

<span data-ttu-id="091c2-300">여러 조건을 확인 하려면 `Switch` 문을 사용 합니다.</span><span class="sxs-lookup"><span data-stu-id="091c2-300">To check multiple conditions, use a `Switch` statement.</span></span> <span data-ttu-id="091c2-301">`Switch`문은 일련의 `If` 문과 동일 하지만 더 간단 합니다.</span><span class="sxs-lookup"><span data-stu-id="091c2-301">The `Switch` statement is equivalent to a series of `If` statements, but it is simpler.</span></span>

<span data-ttu-id="091c2-302">`Switch`문은 각 조건과 선택적 동작을 나열 합니다.</span><span class="sxs-lookup"><span data-stu-id="091c2-302">The `Switch` statement lists each condition and an optional action.</span></span> <span data-ttu-id="091c2-303">조건이 가져오는 경우 작업이 수행 됩니다.</span><span class="sxs-lookup"><span data-stu-id="091c2-303">If a condition obtains, the action is performed.</span></span>

<span data-ttu-id="091c2-304">구문 1:</span><span class="sxs-lookup"><span data-stu-id="091c2-304">Syntax 1:</span></span>

```Syntax
switch [-regex|-wildcard|-exact][-casesensitive] ( <value> )
{
   <string>|<number>|<variable>|{ <expression> } {<statement list>}
   <string>|<number>|<variable>|{ <expression> } {<statement list>}
   ...

   default {<statement list>}
}
```

<span data-ttu-id="091c2-305">구문 2:</span><span class="sxs-lookup"><span data-stu-id="091c2-305">Syntax 2:</span></span>

```Syntax
switch [-regex|-wildcard|-exact][-casesensitive] -file <filename>
{
   <string>|<number>|<variable>|{ <expression> } {<statement list>}
   <string>|<number>|<variable>|{ <expression> } {<statement list>}
   ...

   default {<statement list>}
}
```

### <a name="throw"></a><span data-ttu-id="091c2-306">Throw</span><span class="sxs-lookup"><span data-stu-id="091c2-306">Throw</span></span>

<span data-ttu-id="091c2-307">개체를 오류로 throw 합니다.</span><span class="sxs-lookup"><span data-stu-id="091c2-307">Throws an object as an error.</span></span>

<span data-ttu-id="091c2-308">구문</span><span class="sxs-lookup"><span data-stu-id="091c2-308">Syntax:</span></span>

```Syntax
throw [<object>]
```

### <a name="trap"></a><span data-ttu-id="091c2-309">Trap</span><span class="sxs-lookup"><span data-stu-id="091c2-309">Trap</span></span>

<span data-ttu-id="091c2-310">오류가 발생 한 경우 실행할 문 목록을 정의 합니다.</span><span class="sxs-lookup"><span data-stu-id="091c2-310">Defines a statement list to be run if an error is encountered.</span></span> <span data-ttu-id="091c2-311">오류 유형에는 대괄호가 필요 합니다.</span><span class="sxs-lookup"><span data-stu-id="091c2-311">An error type requires brackets.</span></span> <span data-ttu-id="091c2-312">두 번째 대괄호 쌍은 오류 유형이 optional 임을 나타냅니다.</span><span class="sxs-lookup"><span data-stu-id="091c2-312">The second pair of brackets indicates that the error type is optional.</span></span>

<span data-ttu-id="091c2-313">구문</span><span class="sxs-lookup"><span data-stu-id="091c2-313">Syntax:</span></span>

```Syntax
trap [[<error type>]] {<statement list>}
```

### <a name="try"></a><span data-ttu-id="091c2-314">시도해 보기</span><span class="sxs-lookup"><span data-stu-id="091c2-314">Try</span></span>

<span data-ttu-id="091c2-315">문이 실행 되는 동안 오류를 확인할 문 목록을 정의 합니다.</span><span class="sxs-lookup"><span data-stu-id="091c2-315">Defines a statement list to be checked for errors while the statements run.</span></span> <span data-ttu-id="091c2-316">오류가 발생 하는 경우 PowerShell은 또는 문에서 계속 실행 됩니다 `Catch` `Finally` .</span><span class="sxs-lookup"><span data-stu-id="091c2-316">If an error occurs, PowerShell continues running in a `Catch` or `Finally` statement.</span></span> <span data-ttu-id="091c2-317">오류 유형에는 대괄호가 필요 합니다.</span><span class="sxs-lookup"><span data-stu-id="091c2-317">An error type requires brackets.</span></span> <span data-ttu-id="091c2-318">두 번째 대괄호 쌍은 오류 유형이 optional 임을 나타냅니다.</span><span class="sxs-lookup"><span data-stu-id="091c2-318">The second pair of brackets indicates that the error type is optional.</span></span>

<span data-ttu-id="091c2-319">구문</span><span class="sxs-lookup"><span data-stu-id="091c2-319">Syntax:</span></span>

```Syntax
try {<statement list>}
catch [[<error type>]] {<statement list>}
finally {<statement list>}
```

### <a name="until"></a><span data-ttu-id="091c2-320">발생할</span><span class="sxs-lookup"><span data-stu-id="091c2-320">Until</span></span>

<span data-ttu-id="091c2-321">문 `Do` 목록이 한 번 이상 실행 되는 루핑 구문으로 문에서 사용 됩니다.</span><span class="sxs-lookup"><span data-stu-id="091c2-321">Used in a `Do` statement as a looping construct where the statement list is executed at least one time.</span></span>

<span data-ttu-id="091c2-322">구문</span><span class="sxs-lookup"><span data-stu-id="091c2-322">Syntax:</span></span>

```Syntax
do {<statement list>} until (<condition>)
```

### <a name="using"></a><span data-ttu-id="091c2-323">사용</span><span class="sxs-lookup"><span data-stu-id="091c2-323">Using</span></span>

<span data-ttu-id="091c2-324">세션에서 사용 되는 네임 스페이스를 나타낼 수 있습니다.</span><span class="sxs-lookup"><span data-stu-id="091c2-324">Allows to indicate which namespaces are used in the session.</span></span> <span data-ttu-id="091c2-325">클래스 및 멤버를 입력 하려면 더 작은 입력이 필요 합니다.</span><span class="sxs-lookup"><span data-stu-id="091c2-325">Classes and members require less typing to mention them.</span></span> <span data-ttu-id="091c2-326">모듈의 클래스를 포함할 수도 있습니다.</span><span class="sxs-lookup"><span data-stu-id="091c2-326">You can also include classes from modules.</span></span>

<span data-ttu-id="091c2-327">구문 #1:</span><span class="sxs-lookup"><span data-stu-id="091c2-327">Syntax #1:</span></span>

```Syntax
using namespace <.Net-framework-namespace>
```

<span data-ttu-id="091c2-328">구문 #2:</span><span class="sxs-lookup"><span data-stu-id="091c2-328">Syntax #2:</span></span>

```Syntax
using module <module-name>
```

### <a name="while"></a><span data-ttu-id="091c2-329">While</span><span class="sxs-lookup"><span data-stu-id="091c2-329">While</span></span>

<span data-ttu-id="091c2-330">`while`문은 문이 실행 되기 전에 조건이 테스트 되는 루핑 구문입니다.</span><span class="sxs-lookup"><span data-stu-id="091c2-330">The `while` statement is a looping construct where the condition is tested before the statements are executed.</span></span> <span data-ttu-id="091c2-331">조건이 FALSE 이면 문이 실행 되지 않습니다.</span><span class="sxs-lookup"><span data-stu-id="091c2-331">If the condition is FALSE, then the statements do not execute.</span></span>

<span data-ttu-id="091c2-332">문 구문:</span><span class="sxs-lookup"><span data-stu-id="091c2-332">Statement syntax:</span></span>

```Syntax
while (<condition>) {
   <statements>
 }
```

<span data-ttu-id="091c2-333">문에서 사용 되는 경우 `Do` `while` 는 문 목록이 한 번 이상 실행 되는 루핑 구문의 일부입니다.</span><span class="sxs-lookup"><span data-stu-id="091c2-333">When used in a `Do` statement, `while` is part of a looping construct where the statement list is executed at least one time.</span></span>

<span data-ttu-id="091c2-334">Do 루프 구문:</span><span class="sxs-lookup"><span data-stu-id="091c2-334">Do loop Syntax:</span></span>

```Syntax
do {<statement list>} while (<condition>)
```

## <a name="see-also"></a><span data-ttu-id="091c2-335">참고 항목</span><span class="sxs-lookup"><span data-stu-id="091c2-335">SEE ALSO</span></span>

- [<span data-ttu-id="091c2-336">about_Special_Characters</span><span class="sxs-lookup"><span data-stu-id="091c2-336">about_Special_Characters</span></span>](about_Special_Characters.md)
- [<span data-ttu-id="091c2-337">about_Wildcards</span><span class="sxs-lookup"><span data-stu-id="091c2-337">about_Wildcards</span></span>](about_Wildcards.md)
