reference/7.2/Microsoft.PowerShell.Core/About/about_Language_Keywords.md
---
description: PowerShell 스크립트 언어의 키워드에 대해 설명 합니다.
Locale: en-US
ms.date: 10/06/2020
online version: https://docs.microsoft.com/powershell/module/microsoft.powershell.core/about/about_language_keywords?view=powershell-7.2&WT.mc_id=ps-gethelp
schema: 2.0.0
title: about_Language_Keywords
ms.openlocfilehash: 4136e5fe6b0e3ad2ba1ec41d2dc9a8fba7b88f56
ms.sourcegitcommit: 95d41698c7a2450eeb70ef2fb6507fe7e6eff3b6
ms.translationtype: MT
ms.contentlocale: ko-KR
ms.lasthandoff: 11/17/2020
ms.locfileid: "99602229"
---
# <a name="about-language-keywords"></a><span data-ttu-id="8be16-103">언어 키워드 정보</span><span class="sxs-lookup"><span data-stu-id="8be16-103">About Language Keywords</span></span>

## <a name="short-description"></a><span data-ttu-id="8be16-104">간단한 설명</span><span class="sxs-lookup"><span data-stu-id="8be16-104">SHORT DESCRIPTION</span></span>
<span data-ttu-id="8be16-105">PowerShell 스크립트 언어의 키워드에 대해 설명 합니다.</span><span class="sxs-lookup"><span data-stu-id="8be16-105">Describes the keywords in the PowerShell scripting language.</span></span>

## <a name="long-description"></a><span data-ttu-id="8be16-106">자세한 설명</span><span class="sxs-lookup"><span data-stu-id="8be16-106">LONG DESCRIPTION</span></span>

<span data-ttu-id="8be16-107">PowerShell에는 다음과 같은 언어 키워드가 있습니다.</span><span class="sxs-lookup"><span data-stu-id="8be16-107">PowerShell has the following language keywords.</span></span> <span data-ttu-id="8be16-108">자세한 내용은 키워드에 대 한 about 항목과 표 다음에 나오는 정보를 참조 하세요.</span><span class="sxs-lookup"><span data-stu-id="8be16-108">For more information, see the about topic for the keyword and the information that follows the table.</span></span>

<span data-ttu-id="8be16-109">키워드</span><span class="sxs-lookup"><span data-stu-id="8be16-109">Keyword</span></span>     | <span data-ttu-id="8be16-110">참조</span><span class="sxs-lookup"><span data-stu-id="8be16-110">Reference</span></span>
---         | ---
<span data-ttu-id="8be16-111">시작</span><span class="sxs-lookup"><span data-stu-id="8be16-111">Begin</span></span>       | <span data-ttu-id="8be16-112">[about_Functions](about_Functions.md), [about_Functions_Advanced](about_Functions_Advanced.md)</span><span class="sxs-lookup"><span data-stu-id="8be16-112">[about_Functions](about_Functions.md), [about_Functions_Advanced](about_Functions_Advanced.md)</span></span>
<span data-ttu-id="8be16-113">중단</span><span class="sxs-lookup"><span data-stu-id="8be16-113">Break</span></span>       | <span data-ttu-id="8be16-114">[about_Break](about_Break.md), [about_Trap](about_Trap.md)</span><span class="sxs-lookup"><span data-stu-id="8be16-114">[about_Break](about_Break.md), [about_Trap](about_Trap.md)</span></span>
<span data-ttu-id="8be16-115">Catch</span><span class="sxs-lookup"><span data-stu-id="8be16-115">Catch</span></span>       | [<span data-ttu-id="8be16-116">about_Try_Catch_Finally</span><span class="sxs-lookup"><span data-stu-id="8be16-116">about_Try_Catch_Finally</span></span>](about_Try_Catch_Finally.md)
<span data-ttu-id="8be16-117">인스턴스</span><span class="sxs-lookup"><span data-stu-id="8be16-117">Class</span></span>       | [<span data-ttu-id="8be16-118">about_Classes</span><span class="sxs-lookup"><span data-stu-id="8be16-118">about_Classes</span></span>](about_Classes.md)
<span data-ttu-id="8be16-119">계속</span><span class="sxs-lookup"><span data-stu-id="8be16-119">Continue</span></span>    | <span data-ttu-id="8be16-120">[about_Continue](about_Continue.md), [about_Trap](about_Trap.md)</span><span class="sxs-lookup"><span data-stu-id="8be16-120">[about_Continue](about_Continue.md), [about_Trap](about_Trap.md)</span></span>
<span data-ttu-id="8be16-121">데이터</span><span class="sxs-lookup"><span data-stu-id="8be16-121">Data</span></span>        | [<span data-ttu-id="8be16-122">about_Data_Sections</span><span class="sxs-lookup"><span data-stu-id="8be16-122">about_Data_Sections</span></span>](about_Data_Sections.md)
<span data-ttu-id="8be16-123">정의</span><span class="sxs-lookup"><span data-stu-id="8be16-123">Define</span></span>      | <span data-ttu-id="8be16-124">나중에 사용하도록 예약되어 있습니다.</span><span class="sxs-lookup"><span data-stu-id="8be16-124">Reserved for future use</span></span>
<span data-ttu-id="8be16-125">수행</span><span class="sxs-lookup"><span data-stu-id="8be16-125">Do</span></span>          | <span data-ttu-id="8be16-126">[about_Do](about_Do.md), [about_While](about_While.md)</span><span class="sxs-lookup"><span data-stu-id="8be16-126">[about_Do](about_Do.md), [about_While](about_While.md)</span></span>
<span data-ttu-id="8be16-127">DynamicParam</span><span class="sxs-lookup"><span data-stu-id="8be16-127">DynamicParam</span></span>| [<span data-ttu-id="8be16-128">about_Functions_Advanced_Parameters</span><span class="sxs-lookup"><span data-stu-id="8be16-128">about_Functions_Advanced_Parameters</span></span>](about_Functions_Advanced_Parameters.md)
<span data-ttu-id="8be16-129">Else</span><span class="sxs-lookup"><span data-stu-id="8be16-129">Else</span></span>        | [<span data-ttu-id="8be16-130">about_If</span><span class="sxs-lookup"><span data-stu-id="8be16-130">about_If</span></span>](about_If.md)
<span data-ttu-id="8be16-131">그렇지</span><span class="sxs-lookup"><span data-stu-id="8be16-131">Elseif</span></span>      | [<span data-ttu-id="8be16-132">about_If</span><span class="sxs-lookup"><span data-stu-id="8be16-132">about_If</span></span>](about_If.md)
<span data-ttu-id="8be16-133">끝</span><span class="sxs-lookup"><span data-stu-id="8be16-133">End</span></span>         | <span data-ttu-id="8be16-134">[about_Functions](about_Functions.md), [about_Functions_Advanced_Methods](about_Functions_Advanced_Methods.md)</span><span class="sxs-lookup"><span data-stu-id="8be16-134">[about_Functions](about_Functions.md), [about_Functions_Advanced_Methods](about_Functions_Advanced_Methods.md)</span></span>
<span data-ttu-id="8be16-135">열거형</span><span class="sxs-lookup"><span data-stu-id="8be16-135">Enum</span></span>        | [<span data-ttu-id="8be16-136">about_Enum</span><span class="sxs-lookup"><span data-stu-id="8be16-136">about_Enum</span></span>](about_Enum.md)
<span data-ttu-id="8be16-137">종료</span><span class="sxs-lookup"><span data-stu-id="8be16-137">Exit</span></span>        | [<span data-ttu-id="8be16-138">이 항목에 설명 되어 있습니다.</span><span class="sxs-lookup"><span data-stu-id="8be16-138">Described in this topic</span></span>](#exit)
<span data-ttu-id="8be16-139">Assert</span><span class="sxs-lookup"><span data-stu-id="8be16-139">Filter</span></span>      | [<span data-ttu-id="8be16-140">about_Functions</span><span class="sxs-lookup"><span data-stu-id="8be16-140">about_Functions</span></span>](about_Functions.md)
<span data-ttu-id="8be16-141">Finally</span><span class="sxs-lookup"><span data-stu-id="8be16-141">Finally</span></span>     | [<span data-ttu-id="8be16-142">about_Try_Catch_Finally</span><span class="sxs-lookup"><span data-stu-id="8be16-142">about_Try_Catch_Finally</span></span>](about_Try_Catch_Finally.md)
<span data-ttu-id="8be16-143">For</span><span class="sxs-lookup"><span data-stu-id="8be16-143">For</span></span>         | [<span data-ttu-id="8be16-144">about_For</span><span class="sxs-lookup"><span data-stu-id="8be16-144">about_For</span></span>](about_For.md)
<span data-ttu-id="8be16-145">ForEach</span><span class="sxs-lookup"><span data-stu-id="8be16-145">ForEach</span></span>     | [<span data-ttu-id="8be16-146">about_ForEach</span><span class="sxs-lookup"><span data-stu-id="8be16-146">about_ForEach</span></span>](about_ForEach.md)
<span data-ttu-id="8be16-147">From</span><span class="sxs-lookup"><span data-stu-id="8be16-147">From</span></span>        | <span data-ttu-id="8be16-148">나중에 사용하도록 예약되어 있습니다.</span><span class="sxs-lookup"><span data-stu-id="8be16-148">Reserved for future use</span></span>
<span data-ttu-id="8be16-149">함수</span><span class="sxs-lookup"><span data-stu-id="8be16-149">Function</span></span>    | <span data-ttu-id="8be16-150">[about_Functions](about_Functions.md), [about_Functions_Advanced](about_Functions_Advanced.md)</span><span class="sxs-lookup"><span data-stu-id="8be16-150">[about_Functions](about_Functions.md), [about_Functions_Advanced](about_Functions_Advanced.md)</span></span>
<span data-ttu-id="8be16-151">숨김</span><span class="sxs-lookup"><span data-stu-id="8be16-151">Hidden</span></span>      | [<span data-ttu-id="8be16-152">about_Hidden</span><span class="sxs-lookup"><span data-stu-id="8be16-152">about_Hidden</span></span>](about_Hidden.md)
<span data-ttu-id="8be16-153">조건</span><span class="sxs-lookup"><span data-stu-id="8be16-153">If</span></span>          | [<span data-ttu-id="8be16-154">about_If</span><span class="sxs-lookup"><span data-stu-id="8be16-154">about_If</span></span>](about_If.md)
<span data-ttu-id="8be16-155">In(다음 안에)</span><span class="sxs-lookup"><span data-stu-id="8be16-155">In</span></span>          | [<span data-ttu-id="8be16-156">about_ForEach</span><span class="sxs-lookup"><span data-stu-id="8be16-156">about_ForEach</span></span>](about_ForEach.md)
<span data-ttu-id="8be16-157">매개 변수</span><span class="sxs-lookup"><span data-stu-id="8be16-157">Param</span></span>       | [<span data-ttu-id="8be16-158">about_Functions</span><span class="sxs-lookup"><span data-stu-id="8be16-158">about_Functions</span></span>](about_Functions.md)
<span data-ttu-id="8be16-159">프로세스</span><span class="sxs-lookup"><span data-stu-id="8be16-159">Process</span></span>     | <span data-ttu-id="8be16-160">[about_Functions](about_Functions.md), [about_Functions_Advanced](about_Functions_Advanced.md)</span><span class="sxs-lookup"><span data-stu-id="8be16-160">[about_Functions](about_Functions.md), [about_Functions_Advanced](about_Functions_Advanced.md)</span></span>
<span data-ttu-id="8be16-161">반환 값</span><span class="sxs-lookup"><span data-stu-id="8be16-161">Return</span></span>      | [<span data-ttu-id="8be16-162">about_Return</span><span class="sxs-lookup"><span data-stu-id="8be16-162">about_Return</span></span>](about_Return.md)
<span data-ttu-id="8be16-163">정적</span><span class="sxs-lookup"><span data-stu-id="8be16-163">Static</span></span>      | [<span data-ttu-id="8be16-164">about_Classes</span><span class="sxs-lookup"><span data-stu-id="8be16-164">about_Classes</span></span>](about_Classes.md)
<span data-ttu-id="8be16-165">스위치</span><span class="sxs-lookup"><span data-stu-id="8be16-165">Switch</span></span>      | [<span data-ttu-id="8be16-166">about_Switch</span><span class="sxs-lookup"><span data-stu-id="8be16-166">about_Switch</span></span>](about_Switch.md)
<span data-ttu-id="8be16-167">Throw</span><span class="sxs-lookup"><span data-stu-id="8be16-167">Throw</span></span>       | <span data-ttu-id="8be16-168">[about_Throw](about_Throw.md), [about_Functions_Advanced_Methods](about_Functions_Advanced_Methods.md)</span><span class="sxs-lookup"><span data-stu-id="8be16-168">[about_Throw](about_Throw.md), [about_Functions_Advanced_Methods](about_Functions_Advanced_Methods.md)</span></span>
<span data-ttu-id="8be16-169">Trap</span><span class="sxs-lookup"><span data-stu-id="8be16-169">Trap</span></span>        | <span data-ttu-id="8be16-170">[about_Trap](about_Trap.md), [about_Break](about_Break.md), [about_Try_Catch_Finally](about_Try_Catch_Finally.md)</span><span class="sxs-lookup"><span data-stu-id="8be16-170">[about_Trap](about_Trap.md), [about_Break](about_Break.md), [about_Try_Catch_Finally](about_Try_Catch_Finally.md)</span></span>
<span data-ttu-id="8be16-171">시도해 보기</span><span class="sxs-lookup"><span data-stu-id="8be16-171">Try</span></span>         | [<span data-ttu-id="8be16-172">about_Try_Catch_Finally</span><span class="sxs-lookup"><span data-stu-id="8be16-172">about_Try_Catch_Finally</span></span>](about_Try_Catch_Finally.md)
<span data-ttu-id="8be16-173">발생할</span><span class="sxs-lookup"><span data-stu-id="8be16-173">Until</span></span>       | [<span data-ttu-id="8be16-174">about_Do</span><span class="sxs-lookup"><span data-stu-id="8be16-174">about_Do</span></span>](about_Do.md)
<span data-ttu-id="8be16-175">사용</span><span class="sxs-lookup"><span data-stu-id="8be16-175">Using</span></span>       | <span data-ttu-id="8be16-176">[about_Using](about_Using.md), [about_Classes](about_Classes.md)</span><span class="sxs-lookup"><span data-stu-id="8be16-176">[about_Using](about_Using.md), [about_Classes](about_Classes.md)</span></span>
<span data-ttu-id="8be16-177">Var</span><span class="sxs-lookup"><span data-stu-id="8be16-177">Var</span></span>         | <span data-ttu-id="8be16-178">나중에 사용하도록 예약되어 있습니다.</span><span class="sxs-lookup"><span data-stu-id="8be16-178">Reserved for future use</span></span>
<span data-ttu-id="8be16-179">While</span><span class="sxs-lookup"><span data-stu-id="8be16-179">While</span></span>       | <span data-ttu-id="8be16-180">[about_While](about_While.md), [about_Do](about_Do.md)</span><span class="sxs-lookup"><span data-stu-id="8be16-180">[about_While](about_While.md), [about_Do](about_Do.md)</span></span>

<span data-ttu-id="8be16-181">언어 키워드</span><span class="sxs-lookup"><span data-stu-id="8be16-181">Language Keywords</span></span>

### <a name="begin"></a><span data-ttu-id="8be16-182">시작</span><span class="sxs-lookup"><span data-stu-id="8be16-182">Begin</span></span>

<span data-ttu-id="8be16-183">`DynamicParam`, 및 키워드와 함께 함수 본문의 한 부분을 지정 합니다 `Process` `End` .</span><span class="sxs-lookup"><span data-stu-id="8be16-183">Specifies one part of the body of a function, along with the `DynamicParam`, `Process`, and `End` keywords.</span></span> <span data-ttu-id="8be16-184">`Begin`문 목록은 파이프라인에서 개체를 수신 하기 전에 한 번 실행 됩니다.</span><span class="sxs-lookup"><span data-stu-id="8be16-184">The `Begin` statement list runs one time before any objects are received from the pipeline.</span></span>

<span data-ttu-id="8be16-185">구문</span><span class="sxs-lookup"><span data-stu-id="8be16-185">Syntax:</span></span>

```Syntax
function <name> {
    DynamicParam {<statement list>}
    begin {<statement list>}
    process {<statement list>}
    end {<statement list>}
}
```

### <a name="break"></a><span data-ttu-id="8be16-186">중단</span><span class="sxs-lookup"><span data-stu-id="8be16-186">Break</span></span>

<span data-ttu-id="8be16-187">스크립트에서 루프가 종료 되도록 합니다.</span><span class="sxs-lookup"><span data-stu-id="8be16-187">Causes a script to exit a loop.</span></span>

<span data-ttu-id="8be16-188">구문</span><span class="sxs-lookup"><span data-stu-id="8be16-188">Syntax:</span></span>

```Syntax
while (<condition>) {
   <statements>
   ...

   break
   ...

   <statements>
}
```

### <a name="catch"></a><span data-ttu-id="8be16-189">Catch</span><span class="sxs-lookup"><span data-stu-id="8be16-189">Catch</span></span>

<span data-ttu-id="8be16-190">함께 제공 된 Try 문 목록에서 오류가 발생 하는 경우 실행할 문 목록을 지정 합니다.</span><span class="sxs-lookup"><span data-stu-id="8be16-190">Specifies a statement list to run if an error occurs in the accompanying Try statement list.</span></span> <span data-ttu-id="8be16-191">오류 유형에는 대괄호가 필요 합니다.</span><span class="sxs-lookup"><span data-stu-id="8be16-191">An error type requires brackets.</span></span> <span data-ttu-id="8be16-192">두 번째 대괄호 쌍은 오류 유형이 optional 임을 나타냅니다.</span><span class="sxs-lookup"><span data-stu-id="8be16-192">The second pair of brackets indicates that the error type is optional.</span></span>

<span data-ttu-id="8be16-193">구문</span><span class="sxs-lookup"><span data-stu-id="8be16-193">Syntax:</span></span>

```Syntax
try {<statement list>}
catch [[<error type>]] {<statement list>}
```

### <a name="class"></a><span data-ttu-id="8be16-194">인스턴스</span><span class="sxs-lookup"><span data-stu-id="8be16-194">Class</span></span>

<span data-ttu-id="8be16-195">PowerShell에서 새 클래스를 지정 합니다.</span><span class="sxs-lookup"><span data-stu-id="8be16-195">Specifies a new class in PowerShell.</span></span>

<span data-ttu-id="8be16-196">구문</span><span class="sxs-lookup"><span data-stu-id="8be16-196">Syntax:</span></span>

```Syntax
class <class-name> {
    [[hidden] [static] <property-definition> ...]
    [<class-name>([argument-list>]) {<constructor-statement-list>} ...]
    [[hidden] [static] <method-definition> ...]
}
```

### <a name="continue"></a><span data-ttu-id="8be16-197">계속</span><span class="sxs-lookup"><span data-stu-id="8be16-197">Continue</span></span>

<span data-ttu-id="8be16-198">스크립트를 실행 하 여 루프의 실행을 중지 하 고 조건으로 돌아갑니다.</span><span class="sxs-lookup"><span data-stu-id="8be16-198">Causes a script to stop running a loop and to go back to the condition.</span></span> <span data-ttu-id="8be16-199">조건을 충족 하는 경우 스크립트는 루프를 다시 시작 합니다.</span><span class="sxs-lookup"><span data-stu-id="8be16-199">If the condition is met, the script begins the loop again.</span></span>

<span data-ttu-id="8be16-200">구문</span><span class="sxs-lookup"><span data-stu-id="8be16-200">Syntax:</span></span>

```Syntax
while (<condition>) {
   <statements>
   ...

   continue
   ...

   <statements>
}
```

### <a name="data"></a><span data-ttu-id="8be16-201">데이터</span><span class="sxs-lookup"><span data-stu-id="8be16-201">Data</span></span>

<span data-ttu-id="8be16-202">스크립트에서는 스크립트 논리에서 데이터를 격리 하는 섹션을 정의 합니다.</span><span class="sxs-lookup"><span data-stu-id="8be16-202">In a script, defines a section that isolates data from the script logic.</span></span> <span data-ttu-id="8be16-203">`If`문과 몇 가지 제한 된 명령만 포함할 수 있습니다.</span><span class="sxs-lookup"><span data-stu-id="8be16-203">Can also include `If` statements and some limited commands.</span></span>

<span data-ttu-id="8be16-204">구문</span><span class="sxs-lookup"><span data-stu-id="8be16-204">Syntax:</span></span>

```Syntax
data <variable> [-supportedCommand <cmdlet-name>] {<permitted content>}
```

### <a name="do"></a><span data-ttu-id="8be16-205">수행</span><span class="sxs-lookup"><span data-stu-id="8be16-205">Do</span></span>

<span data-ttu-id="8be16-206">`While` `Until` 루프 구문으로 또는 키워드와 함께 사용 됩니다.</span><span class="sxs-lookup"><span data-stu-id="8be16-206">Used with the `While` or `Until` keyword as a looping construct.</span></span> <span data-ttu-id="8be16-207">PowerShell은에서 사용 하는 루프와 달리 문 목록을 한 번 이상 실행 `While` 합니다.</span><span class="sxs-lookup"><span data-stu-id="8be16-207">PowerShell runs the statement list at least one time, unlike a loop that uses `While`.</span></span>

<span data-ttu-id="8be16-208">`While` 구문:</span><span class="sxs-lookup"><span data-stu-id="8be16-208">Syntax for `While`:</span></span>

```Syntax
do {<statement list>} while (<condition>)
```

<span data-ttu-id="8be16-209">`Until` 구문:</span><span class="sxs-lookup"><span data-stu-id="8be16-209">Syntax for `Until`:</span></span>

```Syntax
do {<statement list>} until (<condition>)
```

### <a name="dynamicparam"></a><span data-ttu-id="8be16-210">DynamicParam</span><span class="sxs-lookup"><span data-stu-id="8be16-210">DynamicParam</span></span>

<span data-ttu-id="8be16-211">`Begin`, 및 키워드와 함께 함수 본문의 한 부분을 지정 합니다 `Process` `End` .</span><span class="sxs-lookup"><span data-stu-id="8be16-211">Specifies one part of the body of a function, along with the `Begin`, `Process`, and `End` keywords.</span></span> <span data-ttu-id="8be16-212">동적 매개 변수는 런타임에 추가 됩니다.</span><span class="sxs-lookup"><span data-stu-id="8be16-212">Dynamic parameters are added at run time.</span></span>

<span data-ttu-id="8be16-213">구문</span><span class="sxs-lookup"><span data-stu-id="8be16-213">Syntax:</span></span>

```Syntax
function <name> {
   DynamicParam {<statement list>}
   begin {<statement list>}
   process {<statement list>}
   end {<statement list>}
}
```

### <a name="else"></a><span data-ttu-id="8be16-214">Else</span><span class="sxs-lookup"><span data-stu-id="8be16-214">Else</span></span>

<span data-ttu-id="8be16-215">키워드와 함께 사용 되어 `If` 기본 문 목록을 지정 합니다.</span><span class="sxs-lookup"><span data-stu-id="8be16-215">Used with the `If` keyword to specify the default statement list.</span></span>

<span data-ttu-id="8be16-216">구문</span><span class="sxs-lookup"><span data-stu-id="8be16-216">Syntax:</span></span>

```Syntax
if (<condition>) {<statement list>}
else {<statement list>}
```

### <a name="elseif"></a><span data-ttu-id="8be16-217">그렇지</span><span class="sxs-lookup"><span data-stu-id="8be16-217">Elseif</span></span>

<span data-ttu-id="8be16-218">`If` `Else` 추가 조건을 지정 하기 위해 및 키워드와 함께 사용 됩니다.</span><span class="sxs-lookup"><span data-stu-id="8be16-218">Used with the `If` and `Else` keywords to specify additional conditionals.</span></span> <span data-ttu-id="8be16-219">`Else`키워드는 선택 사항입니다.</span><span class="sxs-lookup"><span data-stu-id="8be16-219">The `Else` keyword is optional.</span></span>

<span data-ttu-id="8be16-220">구문</span><span class="sxs-lookup"><span data-stu-id="8be16-220">Syntax:</span></span>

```Syntax
if (<condition>) {<statement list>}
elseif (<condition>) {<statement list>}
else {<statement list>}
```

### <a name="end"></a><span data-ttu-id="8be16-221">끝</span><span class="sxs-lookup"><span data-stu-id="8be16-221">End</span></span>

<span data-ttu-id="8be16-222">`DynamicParam`, 및 키워드와 함께 함수 본문의 한 부분을 지정 합니다 `Begin` `End` .</span><span class="sxs-lookup"><span data-stu-id="8be16-222">Specifies one part of the body of a function, along with the `DynamicParam`, `Begin`, and `End` keywords.</span></span> <span data-ttu-id="8be16-223">`End`문 목록은 파이프라인에서 모든 개체를 받은 후 한 번 실행 됩니다.</span><span class="sxs-lookup"><span data-stu-id="8be16-223">The `End` statement list runs one time after all the objects have been received from the pipeline.</span></span>

<span data-ttu-id="8be16-224">구문</span><span class="sxs-lookup"><span data-stu-id="8be16-224">Syntax:</span></span>

```Syntax
function <name> {
   DynamicParam {<statement list>}
   begin {<statement list>}
   process {<statement list>}
   end {<statement list>}
}
```

### <a name="enum"></a><span data-ttu-id="8be16-225">열거형</span><span class="sxs-lookup"><span data-stu-id="8be16-225">Enum</span></span>

<span data-ttu-id="8be16-226">`enum` 는 열거형을 선언 하는 데 사용 됩니다. 열거자 목록 이라고 하는 명명 된 레이블 집합으로 구성 된 고유 형식입니다.</span><span class="sxs-lookup"><span data-stu-id="8be16-226">`enum` is used to declare an enumeration; a distinct type that consists of a set of named labels called the enumerator list.</span></span>

<span data-ttu-id="8be16-227">구문</span><span class="sxs-lookup"><span data-stu-id="8be16-227">Syntax:</span></span>

```Syntax
enum <enum-name> {
    <label> [= <int-value>]
    ...
}
```

### <a name="exit"></a><span data-ttu-id="8be16-228">종료</span><span class="sxs-lookup"><span data-stu-id="8be16-228">Exit</span></span>

<span data-ttu-id="8be16-229">PowerShell에서 스크립트나 PowerShell 인스턴스를 종료 하도록 합니다.</span><span class="sxs-lookup"><span data-stu-id="8be16-229">Causes PowerShell to exit a script or a PowerShell instance.</span></span>

<span data-ttu-id="8be16-230">구문</span><span class="sxs-lookup"><span data-stu-id="8be16-230">Syntax:</span></span>

```Syntax
exit
exit <exitcode>
```

<span data-ttu-id="8be16-231">File 매개 변수와 함께를 사용 하는 경우 스크립트를 `pwsh`  `.ps1` 실행 하는 동안 발생 하는 오류 또는 예외를 처리 하기 위한 지침을 스크립트 파일 자체에 포함 해야 합니다.</span><span class="sxs-lookup"><span data-stu-id="8be16-231">When you use `pwsh` with the **File** parameter, the `.ps1` (script) file itself should include instructions for handling any errors or exceptions that occur while the script is running.</span></span> <span data-ttu-id="8be16-232">`exit`문을 사용 하 여 스크립트의 실행 후 상태를 나타내야 합니다.</span><span class="sxs-lookup"><span data-stu-id="8be16-232">You should only use the `exit` statement to indicate the post-execution status of the script.</span></span>

<span data-ttu-id="8be16-233">Windows에서는와 사이의 숫자가 모두 `[int]::MinValue` `[int]::MaxValue` 허용 됩니다.</span><span class="sxs-lookup"><span data-stu-id="8be16-233">On Windows, any number between `[int]::MinValue` and `[int]::MaxValue` is allowed.</span></span>

<span data-ttu-id="8be16-234">Unix에서는와 사이의 양수만 `[byte]::MinValue` `[byte]::MaxValue` 사용할 수 있습니다.</span><span class="sxs-lookup"><span data-stu-id="8be16-234">On Unix, only positive numbers between `[byte]::MinValue` and `[byte]::MaxValue` are allowed.</span></span> <span data-ttu-id="8be16-235">`-1`부터 까지의 음수는 `-255` 256을 더하여 긍정 숫자로 자동으로 변환 됩니다.</span><span class="sxs-lookup"><span data-stu-id="8be16-235">A negative number in the range of `-1` through `-255` is automatically translated into a positive number by adding 256.</span></span> <span data-ttu-id="8be16-236">예를 들어 `-2` 는로 변환 됩니다 `254` .</span><span class="sxs-lookup"><span data-stu-id="8be16-236">For example, `-2` is transformed to `254`.</span></span>

<span data-ttu-id="8be16-237">PowerShell에서 `exit` 문은 변수의 값을 설정 `$LASTEXITCODE` 합니다.</span><span class="sxs-lookup"><span data-stu-id="8be16-237">In PowerShell, the `exit` statement sets the value of the `$LASTEXITCODE` variable.</span></span> <span data-ttu-id="8be16-238">Windows 명령 셸 (cmd.exe)에서 exit 문은 환경 변수의 값을 설정 합니다 `%ERRORLEVEL%` .</span><span class="sxs-lookup"><span data-stu-id="8be16-238">In the Windows Command Shell (cmd.exe), the exit statement sets the value of the `%ERRORLEVEL%` environment variable.</span></span>

<span data-ttu-id="8be16-239">숫자가 아니거나 플랫폼별 범위를 벗어난 인수는의 값으로 변환 됩니다 `0` .</span><span class="sxs-lookup"><span data-stu-id="8be16-239">Any argument that is non-numeric or outside the platform-specific range is translated to the value of `0`.</span></span>

<span data-ttu-id="8be16-240">다음 예에서는 스크립트 파일에를 추가 하 여 오류 수준 변수 값을 4로 설정 합니다 `exit 4` `test.ps1` .</span><span class="sxs-lookup"><span data-stu-id="8be16-240">In the following example, the user sets the error level variable value to 4 by adding `exit 4` to the script file `test.ps1`.</span></span>

```cmd
C:\scripts\test>type test.ps1
1
2
3
exit 4

C:\scripts\test>pwsh -file ./test.ps1
1
2
3

C:\scripts\test>echo %ERRORLEVEL%
4
```

<span data-ttu-id="8be16-241">을 실행 하 `pwsh.exe -File <path to a script>` 고 스크립트 파일이 명령을 사용 하 여 종료 되는 경우 `exit` 종료 코드는 명령에 사용 되는 숫자 인수로 설정 됩니다 `exit` .</span><span class="sxs-lookup"><span data-stu-id="8be16-241">When you run `pwsh.exe -File <path to a script>` and the script file terminates with an `exit` command, the exit code is set to the numeric argument used with the `exit` command.</span></span> <span data-ttu-id="8be16-242">스크립트에 문이 없으면 스크립트를 `exit` `0` 오류 없이 완료 하거나 `1` 스크립트가 처리 되지 않은 예외에서 종료 될 때 종료 코드는 항상입니다.</span><span class="sxs-lookup"><span data-stu-id="8be16-242">If the script has no `exit` statement, the exit code is always `0` when the script completes without error or `1` when the script terminates from an unhandled exception.</span></span>

### <a name="filter"></a><span data-ttu-id="8be16-243">Assert</span><span class="sxs-lookup"><span data-stu-id="8be16-243">Filter</span></span>

<span data-ttu-id="8be16-244">각 입력 개체에 대해 문 목록이 한 번씩 실행 되는 함수를 지정 합니다.</span><span class="sxs-lookup"><span data-stu-id="8be16-244">Specifies a function in which the statement list runs one time for each input object.</span></span> <span data-ttu-id="8be16-245">프로세스 블록만 포함 하는 함수와 동일한 효과를 가집니다.</span><span class="sxs-lookup"><span data-stu-id="8be16-245">It has the same effect as a function that contains only a Process block.</span></span>

<span data-ttu-id="8be16-246">구문</span><span class="sxs-lookup"><span data-stu-id="8be16-246">Syntax:</span></span>

```Syntax
filter <name> {<statement list>}
```

### <a name="finally"></a><span data-ttu-id="8be16-247">Finally</span><span class="sxs-lookup"><span data-stu-id="8be16-247">Finally</span></span>

<span data-ttu-id="8be16-248">Try 및 Catch와 연결 된 after 문으로 실행 되는 문 목록을 정의 합니다.</span><span class="sxs-lookup"><span data-stu-id="8be16-248">Defines a statement list that runs after statements that are associated with Try and Catch.</span></span> <span data-ttu-id="8be16-249">`Finally` `CTRL+C` 스크립트를 유지 하거나 스크립트에서 Exit 키워드를 사용 하는 경우에도 문 목록이 실행 됩니다.</span><span class="sxs-lookup"><span data-stu-id="8be16-249">A `Finally` statement list runs even if you press `CTRL+C` to leave a script or if you use the Exit keyword in the script.</span></span>

<span data-ttu-id="8be16-250">구문</span><span class="sxs-lookup"><span data-stu-id="8be16-250">Syntax:</span></span>

```Syntax
try {<statement list>}
catch [<error type>] {<statement list>}
finally {<statement list>}
```

### <a name="for"></a><span data-ttu-id="8be16-251">For</span><span class="sxs-lookup"><span data-stu-id="8be16-251">For</span></span>

<span data-ttu-id="8be16-252">조건을 사용 하 여 루프를 정의 합니다.</span><span class="sxs-lookup"><span data-stu-id="8be16-252">Defines a loop by using a condition.</span></span>

<span data-ttu-id="8be16-253">구문</span><span class="sxs-lookup"><span data-stu-id="8be16-253">Syntax:</span></span>

```Syntax
for (<initialize>; <condition>; <iterate>) { <statement list> }
```

### <a name="foreach"></a><span data-ttu-id="8be16-254">ForEach</span><span class="sxs-lookup"><span data-stu-id="8be16-254">ForEach</span></span>

<span data-ttu-id="8be16-255">컬렉션의 각 멤버를 사용 하 여 루프를 정의 합니다.</span><span class="sxs-lookup"><span data-stu-id="8be16-255">Defines a loop by using each member of a collection.</span></span>

<span data-ttu-id="8be16-256">구문</span><span class="sxs-lookup"><span data-stu-id="8be16-256">Syntax:</span></span>

```Syntax
ForEach (<item> in <collection>) { <statement list> }
```

### <a name="from"></a><span data-ttu-id="8be16-257">From</span><span class="sxs-lookup"><span data-stu-id="8be16-257">From</span></span>

<span data-ttu-id="8be16-258">다음에 사용하도록 예약됩니다.</span><span class="sxs-lookup"><span data-stu-id="8be16-258">Reserved for future use.</span></span>

### <a name="function"></a><span data-ttu-id="8be16-259">함수</span><span class="sxs-lookup"><span data-stu-id="8be16-259">Function</span></span>

<span data-ttu-id="8be16-260">재사용 가능한 코드의 명명 된 문 목록을 만듭니다.</span><span class="sxs-lookup"><span data-stu-id="8be16-260">Creates a named statement list of reusable code.</span></span> <span data-ttu-id="8be16-261">함수가 속한 범위의 이름을 지정할 수 있습니다.</span><span class="sxs-lookup"><span data-stu-id="8be16-261">You can name the scope a function belongs to.</span></span> <span data-ttu-id="8be16-262">키워드를 사용 하 여 하나 이상의 명명 된 매개 변수를 지정할 수 있습니다 `Param` .</span><span class="sxs-lookup"><span data-stu-id="8be16-262">And, you can specify one or more named parameters by using the `Param` keyword.</span></span> <span data-ttu-id="8be16-263">함수 문 목록 내에 `DynamicParam` ,, `Begin` `Process` 및 `End` 문 목록을 포함할 수 있습니다.</span><span class="sxs-lookup"><span data-stu-id="8be16-263">Within the function statement list, you can include `DynamicParam`, `Begin`, `Process`, and `End` statement lists.</span></span>

<span data-ttu-id="8be16-264">구문</span><span class="sxs-lookup"><span data-stu-id="8be16-264">Syntax:</span></span>

```Syntax
function [<scope:>]<name> {
   param ([type]<$pname1> [, [type]<$pname2>])
   DynamicParam {<statement list>}
   begin {<statement list>}
   process {<statement list>}
   end {<statement list>}
}
```

<span data-ttu-id="8be16-265">또한 문 목록 외부에서 함수 이름 뒤에 하나 이상의 매개 변수를 정의 하는 옵션이 있습니다.</span><span class="sxs-lookup"><span data-stu-id="8be16-265">You also have the option of defining one or more parameters outside the statement list after the function name.</span></span>

<span data-ttu-id="8be16-266">구문</span><span class="sxs-lookup"><span data-stu-id="8be16-266">Syntax:</span></span>

```Syntax
function [<scope:>]<name> [([type]<$pname1>, [[type]<$pname2>])] {
   DynamicParam {<statement list>}
   begin {<statement list>}
   process {<statement list>}
   end {<statement list>}
}
```

### <a name="if"></a><span data-ttu-id="8be16-267">조건</span><span class="sxs-lookup"><span data-stu-id="8be16-267">If</span></span>

<span data-ttu-id="8be16-268">조건부를 정의 합니다.</span><span class="sxs-lookup"><span data-stu-id="8be16-268">Defines a conditional.</span></span>

<span data-ttu-id="8be16-269">구문</span><span class="sxs-lookup"><span data-stu-id="8be16-269">Syntax:</span></span>

```Syntax
if (<condition>) {<statement list>}
```

### <a name="hidden"></a><span data-ttu-id="8be16-270">숨김</span><span class="sxs-lookup"><span data-stu-id="8be16-270">Hidden</span></span>

<span data-ttu-id="8be16-271">Cmdlet의 기본 결과 `Get-Member` 와 IntelliSense 및 탭 완성 결과에서 클래스 멤버를 숨깁니다.</span><span class="sxs-lookup"><span data-stu-id="8be16-271">Hides class members from the default results of the `Get-Member` cmdlet, and from IntelliSense and tab completion results.</span></span>

<span data-ttu-id="8be16-272">구문</span><span class="sxs-lookup"><span data-stu-id="8be16-272">Syntax:</span></span>

```Syntax
Hidden [data type] $member_name
```

### <a name="in"></a><span data-ttu-id="8be16-273">In(다음 안에)</span><span class="sxs-lookup"><span data-stu-id="8be16-273">In</span></span>

<span data-ttu-id="8be16-274">`ForEach`컬렉션의 각 멤버를 사용 하는 루프를 만들기 위해 문에 사용 됩니다.</span><span class="sxs-lookup"><span data-stu-id="8be16-274">Used in a `ForEach` statement to create a loop that uses each member of a collection.</span></span>

<span data-ttu-id="8be16-275">구문</span><span class="sxs-lookup"><span data-stu-id="8be16-275">Syntax:</span></span>

```Syntax
ForEach (<item> in <collection>){<statement list>}
```

### <a name="inlinescript"></a><span data-ttu-id="8be16-276">InlineScript</span><span class="sxs-lookup"><span data-stu-id="8be16-276">InlineScript</span></span>

<span data-ttu-id="8be16-277">공유 PowerShell 세션에서 워크플로 명령을 실행 합니다.</span><span class="sxs-lookup"><span data-stu-id="8be16-277">Runs workflow commands in a shared PowerShell session.</span></span> <span data-ttu-id="8be16-278">이 키워드는 PowerShell 워크플로에서만 유효 합니다.</span><span class="sxs-lookup"><span data-stu-id="8be16-278">This keyword is valid only in a PowerShell Workflow.</span></span>

<span data-ttu-id="8be16-279">구문</span><span class="sxs-lookup"><span data-stu-id="8be16-279">Syntax:</span></span>

```Syntax
workflow <verb>-<noun>
{
   InlineScript
   {
      <Command/Expression>
      ...

   }
}
```

<span data-ttu-id="8be16-280">`InlineScript`키워드는 `InlineScript` 공유 표준 (비 워크플로) 세션에서 명령을 실행 하는 활동을 나타냅니다.</span><span class="sxs-lookup"><span data-stu-id="8be16-280">The `InlineScript` keyword indicates an `InlineScript` activity, which runs commands in a shared standard (non-workflow) session.</span></span> <span data-ttu-id="8be16-281">키워드를 사용 하 여 `InlineScript` 워크플로에서 유효 하지 않은 명령을 실행 하 고 데이터를 공유 하는 명령을 실행할 수 있습니다.</span><span class="sxs-lookup"><span data-stu-id="8be16-281">You can use the `InlineScript` keyword to run commands that are not otherwise valid in a workflow, and to run commands that share data.</span></span> <span data-ttu-id="8be16-282">기본적으로 InlineScript 스크립트 블록의 명령은 별도의 프로세스에서 실행 됩니다.</span><span class="sxs-lookup"><span data-stu-id="8be16-282">By default, the commands in an InlineScript script block run in a separate process.</span></span>

<span data-ttu-id="8be16-283">자세한 내용은 [워크플로에서 PowerShell 명령 실행](/previous-versions/windows/it-pro/windows-server-2012-R2-and-2012/jj574197(v=ws.11))을 참조 하세요.</span><span class="sxs-lookup"><span data-stu-id="8be16-283">For more information, see [Running PowerShell Commands in a Workflow](/previous-versions/windows/it-pro/windows-server-2012-R2-and-2012/jj574197(v=ws.11)).</span></span>

### <a name="param"></a><span data-ttu-id="8be16-284">매개 변수</span><span class="sxs-lookup"><span data-stu-id="8be16-284">Param</span></span>

<span data-ttu-id="8be16-285">함수에서 매개 변수를 정의 합니다.</span><span class="sxs-lookup"><span data-stu-id="8be16-285">Defines the parameters in a function.</span></span>

<span data-ttu-id="8be16-286">구문</span><span class="sxs-lookup"><span data-stu-id="8be16-286">Syntax:</span></span>

```Syntax
function [<scope:>]<name> {
   param ([type]<$pname1>[, [[type]<$pname2>]])
   <statement list>
}
```

### <a name="process"></a><span data-ttu-id="8be16-287">프로세스</span><span class="sxs-lookup"><span data-stu-id="8be16-287">Process</span></span>

<span data-ttu-id="8be16-288">`DynamicParam`, 및 키워드와 함께 함수 본문의 부분을 지정 합니다 `Begin` `End` .</span><span class="sxs-lookup"><span data-stu-id="8be16-288">Specifies a part of the body of a function, along with the `DynamicParam`, `Begin`, and `End` keywords.</span></span> <span data-ttu-id="8be16-289">`Process`문 목록이 파이프라인에서 입력을 받으면 `Process` 문 목록이 파이프라인의 각 요소에 대해 한 번씩 실행 됩니다.</span><span class="sxs-lookup"><span data-stu-id="8be16-289">When a `Process` statement list receives input from the pipeline, the `Process` statement list runs one time for each element from the pipeline.</span></span> <span data-ttu-id="8be16-290">파이프라인에서 개체를 제공 하지 않는 경우 `Process` 문 목록이 실행 되지 않습니다.</span><span class="sxs-lookup"><span data-stu-id="8be16-290">If the pipeline provides no objects, the `Process` statement list does not run.</span></span> <span data-ttu-id="8be16-291">명령이 파이프라인의 첫 번째 명령이 면 `Process` 문 목록이 한 번 실행 됩니다.</span><span class="sxs-lookup"><span data-stu-id="8be16-291">If the command is the first command in the pipeline, the `Process` statement list runs one time.</span></span>

<span data-ttu-id="8be16-292">구문</span><span class="sxs-lookup"><span data-stu-id="8be16-292">Syntax:</span></span>

```Syntax
function <name> {
   DynamicParam {<statement list>}
   begin {<statement list>}
   process {<statement list>}
   end {<statement list>}
}
```

### <a name="return"></a><span data-ttu-id="8be16-293">반환 값</span><span class="sxs-lookup"><span data-stu-id="8be16-293">Return</span></span>

<span data-ttu-id="8be16-294">PowerShell에서 스크립트나 함수와 같은 현재 범위를 유지 하 고 선택적 식을 출력에 기록 합니다.</span><span class="sxs-lookup"><span data-stu-id="8be16-294">Causes PowerShell to leave the current scope, such as a script or function, and writes the optional expression to the output.</span></span>

<span data-ttu-id="8be16-295">구문</span><span class="sxs-lookup"><span data-stu-id="8be16-295">Syntax:</span></span>

```Syntax
return [<expression>]
```

### <a name="static"></a><span data-ttu-id="8be16-296">정적</span><span class="sxs-lookup"><span data-stu-id="8be16-296">Static</span></span>

<span data-ttu-id="8be16-297">가 정의 된 클래스의 모든 인스턴스에 공통적으로 정의 된 속성이 나 메서드를 지정 합니다.</span><span class="sxs-lookup"><span data-stu-id="8be16-297">Specifies the property or method defined is common to all instances of the class in which is defined.</span></span>

<span data-ttu-id="8be16-298">`Class`사용 예제는를 참조 하세요.</span><span class="sxs-lookup"><span data-stu-id="8be16-298">See `Class` for usage examples.</span></span>

### <a name="switch"></a><span data-ttu-id="8be16-299">스위치</span><span class="sxs-lookup"><span data-stu-id="8be16-299">Switch</span></span>

<span data-ttu-id="8be16-300">여러 조건을 확인 하려면 `Switch` 문을 사용 합니다.</span><span class="sxs-lookup"><span data-stu-id="8be16-300">To check multiple conditions, use a `Switch` statement.</span></span> <span data-ttu-id="8be16-301">`Switch`문은 일련의 `If` 문과 동일 하지만 더 간단 합니다.</span><span class="sxs-lookup"><span data-stu-id="8be16-301">The `Switch` statement is equivalent to a series of `If` statements, but it is simpler.</span></span>

<span data-ttu-id="8be16-302">`Switch`문은 각 조건과 선택적 동작을 나열 합니다.</span><span class="sxs-lookup"><span data-stu-id="8be16-302">The `Switch` statement lists each condition and an optional action.</span></span> <span data-ttu-id="8be16-303">조건이 가져오는 경우 작업이 수행 됩니다.</span><span class="sxs-lookup"><span data-stu-id="8be16-303">If a condition obtains, the action is performed.</span></span>

<span data-ttu-id="8be16-304">구문 1:</span><span class="sxs-lookup"><span data-stu-id="8be16-304">Syntax 1:</span></span>

```Syntax
switch [-regex|-wildcard|-exact][-casesensitive] ( <value> )
{
   <string>|<number>|<variable>|{ <expression> } {<statement list>}
   <string>|<number>|<variable>|{ <expression> } {<statement list>}
   ...

   default {<statement list>}
}
```

<span data-ttu-id="8be16-305">구문 2:</span><span class="sxs-lookup"><span data-stu-id="8be16-305">Syntax 2:</span></span>

```Syntax
switch [-regex|-wildcard|-exact][-casesensitive] -file <filename>
{
   <string>|<number>|<variable>|{ <expression> } {<statement list>}
   <string>|<number>|<variable>|{ <expression> } {<statement list>}
   ...

   default {<statement list>}
}
```

### <a name="throw"></a><span data-ttu-id="8be16-306">Throw</span><span class="sxs-lookup"><span data-stu-id="8be16-306">Throw</span></span>

<span data-ttu-id="8be16-307">개체를 오류로 throw 합니다.</span><span class="sxs-lookup"><span data-stu-id="8be16-307">Throws an object as an error.</span></span>

<span data-ttu-id="8be16-308">구문</span><span class="sxs-lookup"><span data-stu-id="8be16-308">Syntax:</span></span>

```Syntax
throw [<object>]
```

### <a name="trap"></a><span data-ttu-id="8be16-309">Trap</span><span class="sxs-lookup"><span data-stu-id="8be16-309">Trap</span></span>

<span data-ttu-id="8be16-310">오류가 발생 한 경우 실행할 문 목록을 정의 합니다.</span><span class="sxs-lookup"><span data-stu-id="8be16-310">Defines a statement list to be run if an error is encountered.</span></span> <span data-ttu-id="8be16-311">오류 유형에는 대괄호가 필요 합니다.</span><span class="sxs-lookup"><span data-stu-id="8be16-311">An error type requires brackets.</span></span> <span data-ttu-id="8be16-312">두 번째 대괄호 쌍은 오류 유형이 optional 임을 나타냅니다.</span><span class="sxs-lookup"><span data-stu-id="8be16-312">The second pair of brackets indicates that the error type is optional.</span></span>

<span data-ttu-id="8be16-313">구문</span><span class="sxs-lookup"><span data-stu-id="8be16-313">Syntax:</span></span>

```Syntax
trap [[<error type>]] {<statement list>}
```

### <a name="try"></a><span data-ttu-id="8be16-314">시도해 보기</span><span class="sxs-lookup"><span data-stu-id="8be16-314">Try</span></span>

<span data-ttu-id="8be16-315">문이 실행 되는 동안 오류를 확인할 문 목록을 정의 합니다.</span><span class="sxs-lookup"><span data-stu-id="8be16-315">Defines a statement list to be checked for errors while the statements run.</span></span> <span data-ttu-id="8be16-316">오류가 발생 하는 경우 PowerShell은 또는 문에서 계속 실행 됩니다 `Catch` `Finally` .</span><span class="sxs-lookup"><span data-stu-id="8be16-316">If an error occurs, PowerShell continues running in a `Catch` or `Finally` statement.</span></span> <span data-ttu-id="8be16-317">오류 유형에는 대괄호가 필요 합니다.</span><span class="sxs-lookup"><span data-stu-id="8be16-317">An error type requires brackets.</span></span> <span data-ttu-id="8be16-318">두 번째 대괄호 쌍은 오류 유형이 optional 임을 나타냅니다.</span><span class="sxs-lookup"><span data-stu-id="8be16-318">The second pair of brackets indicates that the error type is optional.</span></span>

<span data-ttu-id="8be16-319">구문</span><span class="sxs-lookup"><span data-stu-id="8be16-319">Syntax:</span></span>

```Syntax
try {<statement list>}
catch [[<error type>]] {<statement list>}
finally {<statement list>}
```

### <a name="until"></a><span data-ttu-id="8be16-320">발생할</span><span class="sxs-lookup"><span data-stu-id="8be16-320">Until</span></span>

<span data-ttu-id="8be16-321">문 `Do` 목록이 한 번 이상 실행 되는 루핑 구문으로 문에서 사용 됩니다.</span><span class="sxs-lookup"><span data-stu-id="8be16-321">Used in a `Do` statement as a looping construct where the statement list is executed at least one time.</span></span>

<span data-ttu-id="8be16-322">구문</span><span class="sxs-lookup"><span data-stu-id="8be16-322">Syntax:</span></span>

```Syntax
do {<statement list>} until (<condition>)
```

### <a name="using"></a><span data-ttu-id="8be16-323">사용</span><span class="sxs-lookup"><span data-stu-id="8be16-323">Using</span></span>

<span data-ttu-id="8be16-324">세션에서 사용 되는 네임 스페이스를 나타낼 수 있습니다.</span><span class="sxs-lookup"><span data-stu-id="8be16-324">Allows to indicate which namespaces are used in the session.</span></span> <span data-ttu-id="8be16-325">클래스 및 멤버를 입력 하려면 더 작은 입력이 필요 합니다.</span><span class="sxs-lookup"><span data-stu-id="8be16-325">Classes and members require less typing to mention them.</span></span> <span data-ttu-id="8be16-326">모듈의 클래스를 포함할 수도 있습니다.</span><span class="sxs-lookup"><span data-stu-id="8be16-326">You can also include classes from modules.</span></span>

<span data-ttu-id="8be16-327">구문 #1:</span><span class="sxs-lookup"><span data-stu-id="8be16-327">Syntax #1:</span></span>

```Syntax
using namespace <.Net-framework-namespace>
```

<span data-ttu-id="8be16-328">구문 #2:</span><span class="sxs-lookup"><span data-stu-id="8be16-328">Syntax #2:</span></span>

```Syntax
using module <module-name>
```

### <a name="while"></a><span data-ttu-id="8be16-329">While</span><span class="sxs-lookup"><span data-stu-id="8be16-329">While</span></span>

<span data-ttu-id="8be16-330">`while`문은 문이 실행 되기 전에 조건이 테스트 되는 루핑 구문입니다.</span><span class="sxs-lookup"><span data-stu-id="8be16-330">The `while` statement is a looping construct where the condition is tested before the statements are executed.</span></span> <span data-ttu-id="8be16-331">조건이 FALSE 이면 문이 실행 되지 않습니다.</span><span class="sxs-lookup"><span data-stu-id="8be16-331">If the condition is FALSE, then the statements do not execute.</span></span>

<span data-ttu-id="8be16-332">문 구문:</span><span class="sxs-lookup"><span data-stu-id="8be16-332">Statement syntax:</span></span>

```Syntax
while (<condition>) {
   <statements>
 }
```

<span data-ttu-id="8be16-333">문에서 사용 되는 경우 `Do` `while` 는 문 목록이 한 번 이상 실행 되는 루핑 구문의 일부입니다.</span><span class="sxs-lookup"><span data-stu-id="8be16-333">When used in a `Do` statement, `while` is part of a looping construct where the statement list is executed at least one time.</span></span>

<span data-ttu-id="8be16-334">Do 루프 구문:</span><span class="sxs-lookup"><span data-stu-id="8be16-334">Do loop Syntax:</span></span>

```Syntax
do {<statement list>} while (<condition>)
```

## <a name="see-also"></a><span data-ttu-id="8be16-335">참고 항목</span><span class="sxs-lookup"><span data-stu-id="8be16-335">SEE ALSO</span></span>

- [<span data-ttu-id="8be16-336">about_Special_Characters</span><span class="sxs-lookup"><span data-stu-id="8be16-336">about_Special_Characters</span></span>](about_Special_Characters.md)
- [<span data-ttu-id="8be16-337">about_Wildcards</span><span class="sxs-lookup"><span data-stu-id="8be16-337">about_Wildcards</span></span>](about_Wildcards.md)

